--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,21 +1,16 @@
 ---
-title: 70名日本志愿者赴乌克兰参战
+title: 台湾｜拜登特使团访台 美国强调反对片面改变现状
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2092075/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2092294/)
 
-撰稿：东京樱花团/龟龟
+**撰文/ 港台前线｜发布日期/ 02/03/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Music-Clip-6.png)**更多資訊請關注官方蓋特｜please follow our Gettr （[https://gettr.com/post/pl6w8he0b9)](https://gettr.com/post/pwkty7e61c)**
+美国总统拜登指派的代表团，3月2日早上总统蔡英文亲自接见，美国前参谋首长联席会议主席穆伦向蔡总统保证，美国反对片面改变现状，支持符合台湾人民意愿，和平解决两岸议题。
 
-乌克兰驻日本大使称约70名日本人自愿参加乌克兰政府招募的“外国志愿者”。乌克兰驻日本大使馆在推特上发布了泽连斯基总统的呼吁，要求专门组建一个日语外国军团。
+美国总统拜登专程指派跨党派资深代表访问团，由美国前参谋首长联席会议主席穆伦（Michael Glenn Mullen）率领，成员包括：前国防部政策次长傅洛依（Michèle A. Flournoy）、前白宫副国安顾问欧苏莉文（Meghan L. O’Sullivan）、前白宫国安会亚洲事务资深主任葛林（Michael Green）及前白宫国安会亚洲事务资深主任麦艾文（Evan S. Medeiros）。
 
-乌克兰驻日本大使科尔孙斯基在电视台被问及“大约有70个日本人申请吗？”时承认他是“是”。另一方面，科尔孙斯基大使表示，“不得违反国内法，我理解日本的敏感性。”
+來源｜[YAHOO TV](https://tw.tv.yahoo.com/拜登特使團訪台-穆倫-美國反對片面改變現狀-043004404.html)
 
-不过，日本政府却对乌克兰驻日大使馆和这些志愿者的做法提出了反对意见，日本外务大臣林芳正曾在新闻发布会上呼吁日本公民不要前往乌克兰。对于日本政府的意见，乌克兰使馆方表示自己会考虑请来自日本的志愿者承担“人道主义救援方面的工作”。
-
-信息链接：[https://www.fnn.jp/articles/-/323402](https://www.fnn.jp/articles/-/323402)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
