--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,40 +1,41 @@
 ---
-title: 【转】截至3.2 俄乌战事汇总（2）
+title: 乌克兰前沿每日报道
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2091951/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2092129/)
 
-#### 采集：文洋
-![](https://assets.gnews.org/wp-content/uploads/2022/03/16461932141.png)
-1. 乌克兰内政部顾问：俄罗斯军队已经进入赫尔松 ，但乌克兰仍控制着城市行政大楼。
-2. 市场消息：俄罗斯乌拉尔石油在欧洲的报价贴水创下新的纪录。
-3. 市场消息：瑞士将向乌克兰运送25吨救援物资。
-4. 市场消息：一些俄罗斯石油公司将银行账户从受制裁的银行转移到罗斯银行 （Rosbank）、裕信银行 （UniCredit）和罗马尼亚银行Raiffeisen，以维持业务运营。
-5. 据当地时间3月1日，联大主席发言人表示，联合国大会紧急特别会议将在美东时间3月2日早10时（北京时间3月2日23:00）就乌克兰提交的决议草案进行投票。决议需要联大超过三分之二的非弃权票投赞同才能通过。
-6. 土耳其总统发言人：乌克兰、俄罗斯代表团很可能不会在周三会面，因俄罗斯有“不切实际”的要求。
-7. 市场消息：欧盟代表们同意进入乌克兰申请加入欧盟的下一阶段。
-8. 美国众议院民主党议员Delauro：对乌克兰的援助金额可能是100亿美元。
-9. 据法新社：国际网球联合会宣布禁止俄罗斯和白俄罗斯的球队参加戴维斯杯比赛。
-10. 市场消息：英国就俄罗斯问题对4名白俄罗斯官员实施制裁。
-11. 市场消息：世界银行寻求启动快速通道基金为乌克兰的发展政策贷款提供3.5亿美元。
-12. 市场消息：海牙国际法院将于3月6日至7日就俄罗斯入侵乌克兰一案举行听证会。
-13. 克里姆林宫：普京签署了一项法令，从3月2日起禁止从俄罗斯提取超过1万美元的外汇。
-14. 当地时间3月1日，白俄罗斯国防部表示，“300辆白俄罗斯坦克驶向乌克兰”的消息是谣言，白俄罗斯没有“坦克集团军”这样的编制。（央视新闻）
-15. 欧盟代表们同意将7家俄罗斯银行排除在环球银行金融电信协会SWIFT之外，但其中没有该国最大银行联邦储蓄银行（Sberbank）和俄罗斯天然气工业银行（Gazprombank）。后者部分为俄罗斯天然气工业股份有限公司所有。根据知情官员透露，俄罗斯外贸银行VTB和Bank Rossiya等银行面临被逐出SWIFT。预计这些措施将于隔夜实施。官员们表示，其他被列入欧盟名单的机构是Bank Otkritie，Novikombank，Promsvyazbank，Sovcombank和VEB.RF。波兰等国家已经敦促将更多俄罗斯银行纳入名单。在正式生效之前，名单仍可能会发生变化。
-16. 克里姆林宫：涉及对俄罗斯不友好国家的实体的证券、房地产业务或提供卢布贷款，将需要特别授权。
-17. 芬兰总理：芬兰将尽快减少对俄罗斯能源的依赖。
-18. 据卫星新闻：波兰开始没收俄罗斯在华沙的财产，包括俄罗斯大使馆下属的学校建筑。
-19. 苹果表示已经暂停了在俄罗斯的所有产品销售，停止所有出口到俄罗斯的销售渠道，将移除俄罗斯以外应用商店的RT新闻和卫星新闻应用。在乌克兰，苹果禁用地图应用上的交通和实时事件。
-20. 国际汽车联合会FIA谴责俄罗斯入侵乌克兰。
-21. 乌克兰请求联合国红十字会帮助建立人道主义走廊。
-22. 俄罗斯联邦外贸银行VTB：VTB银行的手机应用程序可能很快无法在苹果的ios系统上完全顺利运行。
-23. 日本首相岸田文雄：考虑到俄罗斯入侵乌克兰，日本计划制定新的国家安全战略。
-24. 据俄新社：俄罗斯驻联合国特使表示，看不出乌克兰政权有任何尝试为问题找到合法和平衡的解决办法。
-25. 当地时间3月2日，俄罗斯常驻联合国日内瓦办事处代表加季洛夫在接受媒体采访时表示，俄方希望与乌克兰方面继续会谈，并且希望会谈成为政治解决目前问题的开端。但他同时指出，俄方并不相信与乌方的对话能够达成预期结果。
-26. 欧安组织驻乌克兰特别监察团发布消息称，赫尔松、顿涅茨克和哈尔科夫及这些城市的郊区2月28日晚和3月1日晨传来机枪开火和爆炸声。（卫星新闻）
-27. 美国总统拜登：随着新冠肺炎病例的减少，美国的生活正在恢复正常。
-28. 乌克兰国家安全和国防委员会主席奥莱克西·丹尼洛夫在3月1日的简报会上声称，乌克兰军队挫败了一场针对该国总统泽连斯基的暗杀图谋。 根据达尼洛夫的说法，一支名为Kadyrovites的车臣精锐特种部队一直在幕后策划暗杀泽连斯基，但计划随后被挫败。
-29. 日本首相岸田文雄：日本政府没有考虑讨论核共享问题
+整撰：奔跑吧黄小鸭
+![](https://assets.gnews.org/wp-content/uploads/2022/03/1-21.jpg)图片来源：https://www-breitbart-com
+基辅时间3月 2 日，俄罗斯入侵乌克兰的第七天，以下是乌克兰战争相关的消息
 
+**俄乌前沿最新战况**
+
+- BBC报道，在俄乌越来越激烈的交战中，莫斯科部署了超过75% 的入侵部队。乌克兰士兵进行顽强地对抗，声称已经打死或打伤了大约 5,710 名俄罗斯士兵
+- 美国五角大楼表示，俄罗斯军队在六天后仍未控制乌克兰的天空，也没有占领该国第二大城市哈尔科夫或南部港口马里乌波尔等关键目标。五角大楼还补充说，俄罗斯发射了大约400枚导弹，但乌克兰的反导防御系统仍然可行。有迹象表明，一些俄罗斯部队正在耗尽食物和燃料。一位美国国防官员称，俄罗斯的行动比计划的要慢得多，因面临供应短缺，俄军士气开始低落
+- 乌克兰总统泽连斯基在基辅的一个秘密掩体中向西方媒体发表讲话，称“乌克兰将比任何人都更强大”，但它无法独自应对俄罗斯的战争。他告诉美国有线电视新闻网和路透社，俄罗斯只有首先停止战斗，双方的停火谈判才会是严肃的
+- 普京总统签署一项法令，俄罗斯公民不能再带着超过 10,000 美元的外币离开该国。该命令将从周三开始生效
+- 俄罗斯军方一直不愿承认在乌克兰的损失，但地方当局表示正在向遇难俄罗斯军人的家属提供赔偿。Ekho Moskvy电台援引车臣领导人拉姆赞·卡德罗夫的话据说他们的亲属将获得 200 万卢布（按当前汇率计算低于 20,000 美元）
+- 周二在俄罗斯西部城市圣彼得堡，有90多名抗议者在抗议乌克兰战争时被捕。一天前，该市警方拘留了约900名反战抗议者
+- 乌克兰紧急服务部门表示，在俄罗斯袭击基辅电视塔时，有五人丧生。目前尚不清楚塔本身是否被击中，它仍然站立，但爆炸导致一些广播停止。乌克兰外交部在推特上表示，俄罗斯袭击巴宾亚尔遇难者纪念碑附近的电视塔是野蛮的行为。
+- 据联合国统计，已有超过 660,000 名平民逃离乌克兰，但欧盟估计，这一数字可能会大幅增加至约 400 万。难民正在越过边界前往西部的邻国，包括波兰、罗马尼亚、斯洛伐克、匈牙利和摩尔多瓦
+
+
+**美欧国家最新动态**
+
+- 美国总统乔·拜登在国会发表了他的首场国情咨文演讲。演讲稿在过去一周被改写，以应对局势不断恶化的乌克兰战争。拜登会说，“普京将为入侵乌克兰付出沉重和长久的代价”。 据布赖特巴特新闻报道，拜登在讲话中 12 次提到普京，而中国只提到了 3 次。
+- 哥伦比亚广播公司新闻报道称，继欧洲国家和加拿大对俄罗斯关闭自己的领空后，美国计划将在未来 24 小时内下达禁止俄罗斯拥有和运营的飞机从美国起飞的命令，一些从俄罗斯飞往美国的航班已经被取消
+- 世界银行集团和国际货币基金组织正在为乌克兰准备融资支持。世界银行表示，将在未来几个月内认捐 30 亿美元（23 亿英镑），其中包括下周至少 3.5 亿美元。国际货币基金组织同时表示，希望在 6 月之内提供 22 亿美元的资金
+- 国际能源署 (IEA) 的成员国已同意在俄罗斯入侵乌克兰期间从其紧急储备中释放 6000 万桶石油，以应对油价大涨造成能源供应出现短缺的危机。IEA成员包括美国、英国、欧盟国家、墨西哥、加拿大、日本等。本周早些时候，石油巨头壳牌和英国石油公司表示，他们将出售俄罗斯能源公司的股份并停止项目
+- 有消息称苹果公司宣布，已暂停在俄罗斯销售其产品。据路透社报道，苹果公司还限制了其支付系统、Apple Pay 和其他服务，包括实时交通跟踪。BBC乌克兰语的报道显示，俄罗斯消费者试图在该公司网站上购买 iPhone、手表或 MacBook 时会收到一条消息，称无法交付货物。
+- 谷歌已从搜索工具中删除了俄罗斯国家媒体 RT。该公司还限制俄罗斯政府资助的新闻网站在YouTube 上做广告和使用某些功能。RT 和另一个政府资助的网站 Sputnik 被美国国务院视为俄罗斯虚假信息和宣传生态系统中的两个“关键要素”
+- 最近几天，世界许多行业都在与俄罗斯保持距离。世界上最大的航空航天制造商之一波音公司周二宣布将暂停在莫斯科的所有主要业务。这意味着该公司将不再为俄罗斯飞机提供技术支持、维护或零部件。周一，该公司关闭了其在基辅的办事处，并停止了在莫斯科的飞行员培训业务；几家主要的好莱坞娱乐公司已暂停在俄罗斯上映电影。英国的BBC 和ITV宣布将停止向俄罗斯授权内容；英国已通过一项法律，禁止与“任何与俄罗斯有联系”的船只进入其港口
+- 俄罗斯外交部长谢尔盖·拉夫罗夫在联合国视频会议上遭到外交抵制。当轮到他开始讲话时，西方大使们集体离开了，随后他参加的联合国人权理事会也遭到同样的冷遇
+
+
+参考链接：
+
+[Ukraine live updates: Deadly blast at Kyiv TV tower after Russia warns capital – BBC News (www-bbc-com.translate.goog)](https://www-bbc-com.translate.goog/news/live/world-europe-60542877?_x_tr_sl=en&amp;_x_tr_tl=zh-CN&amp;_x_tr_hl=zh-CN&amp;_x_tr_pto=sc)
+
+[\*\*LIVE UPDATES\*\* Biden Delivers State of the Union Address Amid Multiple Crises (www-breitbart-com.translate.goog)](https://www-breitbart-com.translate.goog/politics/2022/03/01/live-updates-biden-delivers-state-of-the-union-address-amid-multiple-crises/?_x_tr_sl=en&amp;_x_tr_tl=zh-CN&amp;_x_tr_hl=zh-CN&amp;_x_tr_pto=sc)
 
  
 
