--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,21 +1,27 @@
 ---
-title: 中日财经爆&#124;七国集团将冻结俄罗斯权贵资产
+title: 视频&#124;为普京核部署铺路，白俄罗斯修宪废除核中立原则
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2091943/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2092124/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-136.png)[图片来源](https://www.reuters.com/world/g7-finmins-discussed-further-sanctions-vs-russia-germanys-lindner-2022-03-01/)
-美国财政部长耶伦(Janet Yellen)周二（3月1日）表示，七国集团(G7)将召集一个特别工作组，重点是冻结和扣押俄罗斯主要权贵人士的资产，目的是在俄罗斯入侵乌克兰后对其进一步施加压力。
+制作：香草山视频部
 
-叶伦在G7财长线上会议后的声明中称，此举 “将给普京周围有权势的人带来经济上的痛苦，并清楚地表明，没有人是我们的集体行动所不能及的。”
+白俄罗斯28日宣布公投结果，正式撤销核中立地位，废除原宪法中订明的，国内不部署、不发展核武的中立原则，此举为俄罗斯利用境内核武部署以威胁欧洲大陆，扫除了障碍。
 
-她并称，G7还将继续支持把俄罗斯主要金融机构从SWIFT支付系统中剔除，并补充说G7预计迄今为止实施的制裁将 “束缚俄罗斯政府为其入侵提供资金的能力。”
+另外，经多家外媒确认，白罗斯军队在当地时间28日正式联同俄罗斯军方入侵乌克兰。空降部队已于凌晨时分登上俄军运输机，前往出发进入乌克兰境内。白罗斯总统卢卡申科早前表示，该国军队只会在境内为俄军提供补给后勤工作，不料出尔反尔，动用军力支持俄军进攻，加上先前被发现放任俄军于其领空发射导弹袭击乌克兰，白俄罗斯已被欧盟列为另一入侵者并实施制裁。
 
-消息来源：[G7将冻结俄罗斯精英人士的资产–美国财长](https://cn.reuters.com/article/yellen-g7-ru-elites-assets-0302-idCNKBS2KZ05I?il=0)
+目前，俄罗斯与乌克兰仍在白俄罗斯谈判，首轮会谈没有达成共识，有评论预计短期内达成即时停战的机会也不大。新中国联邦发起人郭文贵先生在最近一次直播中分析认为，俄乌战争进行到现在，各方的目的已经很明朗，美国在等一个好时机，等待中共攻打台湾，而俄罗斯，无论与乌克兰之间是和解还是动用核武器，俄罗斯都注定失败，它将在未来一段时间内都深陷在被世界孤立的窘境中。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+发稿：Daxia
+
+![图片](https://media.discordapp.net/attachments/942386408801337424/948070260186161232/3.png?width=268&amp;height=369)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
