--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,27 +1,22 @@
 ---
-title: 俄军士兵请放下屠刀 为普京送命只值105美金
+title: 视频&#124;英国王室罕有发表政治态度：“我们与乌克兰站在一起”
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2092019/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2092190/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/03/1-20.jpg)
-图为俄罗斯武装部队（图片来自网络）
+制作：香草山视频部
 
-俄罗斯悍然发动对乌克兰的侵略战争，目前双方都死伤惨重。而为俄罗斯卖命的俄军士兵，竟然命贱到每人抚恤金只有105美金！
+英国王室因恪守宪政规范，维持政治中立，向来对政治议题取态谨慎，不过，就目前正发生的俄乌战争，王室成员们罕有地作出了公开的政治表态。
 
-据《阿波罗新闻网》3月2日报道，俄罗斯总统普京2月24日派兵入侵乌克兰，至今已近一周时间。目前两军死伤惨重，但俄方直至2月28日才公布有俄军官兵伤亡。而俄军士兵阵亡的家属抚恤金，一人竟仅能拿到11000卢布，相当于105美元。
+威廉王子和妻子凯特27日在社交平台推特上表示，“今天，当乌克兰人英勇的为未来奋战时，我们和泽伦斯基总统以及乌克兰全体民众站在一起。”
 
-前乌克兰官员萨姆利尼（Sergej Sumlenny）周二在推特上转发俄罗斯电视台发布的消息，指出俄罗斯士兵若在战争中阵亡，俄国政府会给家属每人抚恤金11000卢布（约105美元）。
+另外，早前已卸下王室头衔的哈利王子和妻子梅根也在社交平台声援乌克兰，谴责俄罗斯违反国际法和非人道的侵略举动。
 
-而与此同时，乌克兰国防部长列兹尼科夫（Oleksii Reznikov）透过脸书招降俄军，表示俄军若投降，将给予500万卢布（大约5万美元）的现金或加密货币，呼吁俄军展开新生活。
+发稿：谐趣园
 
-为普京发动的侵略战争卖命，不仅如此命贱，并且还将背上历史的骂名。俄军士兵们，放下屠刀吧，该做出你们正确的选择了。
-
-新闻链接：
-
-[https://www.aboluowang.com/2022/0302/1715365.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0302/1715365.html?utm_source=dlvr.it&amp;utm_medium=twitter)
-
-* * *
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
