--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,17 +1,25 @@
 ---
-title: 中共自知命不久矣 两会在即立下遗言
+title: 视频&#124;美国驱逐12名俄罗斯驻联合国官员 俄罗斯警告会以牙还牙
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2092001/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2092156/)
 
-撰稿：东京樱花团/加一颗稻草
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-141.png)[图片来源](https://www.google.com/imgres?imgurl=http%3A%2F%2Fimgcdn.yicai.com%2Fvms-new%2F2022%2F03%2F8d29c2ac-1f25-4952-a7c2-876fcf5fbbd7.jpg&amp;imgrefurl=https%3A%2F%2Fwww.yicai.com%2Fnews%2F101332570.html&amp;tbnid=kDeDhOTY8soEoM&amp;vet=12ahUKEwi-yq3Nxab2AhUe73MBHf8pADoQMygEegUIARC1AQ..i&amp;docid=8P8gf-GNvG2MYM&amp;w=886&amp;h=488&amp;itg=1&amp;q=%E4%B9%A0%E8%BF%91%E5%B9%B3%E5%9C%A8%E4%B8%AD%E5%A4%AE%E5%85%9A%E6%A0%A1&amp;ved=2ahUKEwi-yq3Nxab2AhUe73MBHf8pADoQMygEegUIARC1AQ)
-央视网2022年3月2日报道，习近平在中央党校(国家行政学院)中青年干部培训班开班式上发表讲话强调，巩固理想信念根基，树立践行正确政绩观，在新时代新征程上留下无悔的奋斗足迹。
+制作：香草山视频部
 
-中共历来中冠冕堂皇的话语来掩盖其卑鄙的统治手段。现在由小编我来为大家逐句解释这段新闻的内在意图。1、他给中青年干部讲话，说明老的干部已经不被信任了，只有忽悠这些没有根基的愣头青。2、强调巩固根基说明这个根基已经出问题了。一个破旧的建筑不想倒下只有维护根基这一个办法。3、要求树立正确的政绩观，是告诉这些人靠经济出政绩已经不行了，维稳是现在的政绩观。4、最后一句话才是重中之重，在目前的国际、国内的形式面前已经没有退路了。宗上所述，中共已经穷途末路正在准备做垂死挣扎。
+在联合国安理会周一（28日）召开全体成员国紧急大会期间，美国对俄罗斯祭出最新制裁，宣布驱逐12名俄罗斯驻联合国官员，指控他们滥用在美居住特权，从事危害美国国家安全的情报搜集工作。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+俄罗斯驻联合国大使涅边贾表示，俄方会对此举做出回应。在乌克兰战争爆发前，美国就曾多次指控俄罗斯外交人员是间谍，以外交工作掩护情报搜集。
+
+发稿：Daxia
+
+![图片](https://media.discordapp.net/attachments/942386408801337424/948070260186161232/3.png?width=268&amp;height=369)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
