--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,43 +1,20 @@
 ---
-title: 封城在即，香港出现抢购潮和离港潮
+title: 视频&#124;瑞士首次打破中立 宣布制裁俄罗斯 冻结普京等336人资产
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2091956/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2092151/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+制作：香草山视频部
 
-翻译/编辑：文泓
+瑞士总统卡西斯28日表示，瑞士将暂时放下“政治中立”的承诺，向俄罗斯祭出制裁，包含冻结俄罗斯在瑞士的资产、冻结俄罗斯总统普京在内共336人在瑞士银行的帐户，同时禁止俄罗斯飞机进入瑞士领空，取消瑞士航空飞往俄罗斯的航班等，措施与欧盟已经展开的制裁行动一致，卡西斯形容，“这是瑞士前所未有的举动！”
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/03/4-5.png)图片来源：The New York Times & Business Insider
+瑞士向来保持政治中立，但该国政府认为这次俄罗斯的行为是“对自由的攻击、对民主的攻击、对平民的攻击”。卡西斯强调“在这些黑暗的日子里，瑞士将与乌克兰人民站在一起。俄罗斯的侵略行为在国际上、政治上及道德上都是不能被接受的。”
 
+发稿：谐趣园
 
-当地时间3月1日，据德国之声报道，由于港共政府仍未明确表示是否将在3月执行严格的封城令，令本地超市和商店出现了恐慌性抢购潮，今天香港市民将货架上的商品一扫而空。对于充满不确定性的未来，一些跨国公司和居民选择离开香港。
-
-对于封锁规则的担忧使香港市民涌向超市、药局和蔬菜店扫货。社交媒体上流传的照片显示，各种物资包括肉类、蔬菜、冷冻食品、面条、止疼片和检测试剂盒已经几乎售完。
-
-过去的两个月内，香港新增了超过19万新冠病例。这个金融中心正处于最严重的奥密克戎疫情高峰期，每天都有数以万计的新病例，自疫情发生以来的所谓“清零策略”被攻破，让医院人满为患。
-
-港共当局计划在本月对其740万居民进行全民检测，并将所有感染者隔离在家中，或安置于由中国大陆协助建造的临时医院内。在未来几周内，香港政府将建设更多专门接收轻症病患的临时医院。
-
-林郑月娥早前称，将不会实施如大陆式的严格封锁策略，即在检测期间把居民限制在家中，不得外出。不过，在2月28日香港食物及卫生局局长陈肇始证实“硬封城”仍是一个选项。而当日，多家香港媒体也援引消息人士表示，当局正计划尝试多种限制方案，打算于全民检测期间实施。
-
-作为全球人口密度最高的城市之一，香港超市的储藏空间有限。而在该座城市里的多数公寓也相当狭小，没有多少空间可以储存物资。
-
-香港绝大部分的食品都从中国大陆进口，而目前因为跨境卡车司机被高传播性的奥密克戎变种感染，使物资供应变得更加紧张。香港政府周一稍晚向市民喊话说，食品供应保持不变，不需要恐慌性购买。
-
-在香港，人们对政府承诺的可信度很低，在一系列的反送中运动之后，两年以来，当局对异议人士进行打压，对给出的承诺曾出尔反尔。
-
-疫情爆发和政府防疫措施也使得人口外流加快，《钜亨网》引用香港政府数据报导，2月14日至20日当周，香港有2万7千多人离境，为新冠肺炎疫情以来最高峰。
-
-参考链接：[担心封城 香港出现抢购潮和离港潮](https://www.dw.com/zh/%E6%8B%85%E5%BF%83%E5%B0%81%E5%9F%8E-%E9%A6%99%E6%B8%AF%E5%87%BA%E7%8E%B0%E6%8A%A2%E8%B4%AD%E6%BD%AE%E5%92%8C%E7%A6%BB%E6%B8%AF%E6%BD%AE/a-60961704)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
