--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,27 +1,47 @@
 ---
-title: 美国跨党派参访团，支持捍卫43年台湾关系法
+title: 【秘翻在线】实时更新：美国将对所有俄罗斯飞机关闭其领空
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2091898/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2092122/)
 
-美国总统拜登指派由前参谋首长联席会议主席穆伦率领的跨党派访问团昨抵台，特使团今日上午先后晋见蔡英文总统与副总统赖清德。面对乌克兰情势，蔡总统说，对侵略行为冷眼姑息，就是为自己制造更多威胁。乌克兰经验告诉我们民主国家相互合作与积极作为，是至为关键。穆伦则表示，美国反对片面改变现状行为，透过访台向区域伙伴传达美国坚定维持承诺。
+**撰稿：Grace**
 
-这是拜登第二度派遣特使团访台，去年4月拜登派好友前参议员托德率团访台。这次访团由穆伦率领，成员有前国防部政策次长傅洛依、前白宫副国安顾问欧苏莉文、前白宫国安会亚洲事务资深主任葛林及麦艾文。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Screen-Shot-2022-03-01-at-11.34.46-PM.jpeg)图片来源：nbcnews
+**11分钟前****  乌克兰收到****3400万美元的加密货币捐款**
 
-蔡英文首先致词表示，在全球密切关注乌克兰情势此刻，拜登政府指派跨党派资深访团来台，说明对台美伙伴关系的重视，并凸显台湾在区域与国际社会角色，而国际民主社群必须更加团结。
+据《福克斯新闻》3月1日报道，一家加密货币追踪公司称，乌克兰在继续抵御俄军的入侵时，已经收到了3380万美元的比特币和以太坊等数字货币。
 
-她接着说，俄罗斯入侵乌克兰严重破坏国际和平与秩序，对于侵略行为，台湾作为国际社会一员，除了严厉谴责，也参与制裁俄罗斯行动，对乌克兰人道救援也已经启动。这坚定表达台湾与乌克兰站在一起，与自由民主站在一起，只要有助于国际社会和平安全与区域稳定繁荣，台湾愿意善尽国际责任与所有国家一起投注努力。
+据美联社报道，在乌克兰上周发出捐款请求后，有3万份独特的捐款。
 
-蔡总统说，历史经验告诉我们，对侵略行为冷眼姑息，就是为自己制造更多威胁。这是全球民主国家团结的时刻，台湾也不能缺席。尤其乌克兰人民捍卫自由民主信念与保护自己国家的决心，让身处民主国家的台湾感同身受，当前中国对台海与区域军事威胁持续升高，**无论打压台湾国际空间，进行认知作战并操作错假讯息分化台湾社会与侵蚀民主，这些动作没有一天停止，而台湾人民没有因此放弃坚持。**我们愿意投入更多努力让台湾成为更具韧性的民主之岛。
+**24分钟前****  美国公民加入乌克兰的反俄斗争**
 
-总统强调，我们要告诉全世界，台湾有坚定自我防卫决心，也会守护民主生活方式，而区域稳定安全从来不是单一国家课题，乌克兰经验告诉我们民主国家相互合作与积极作为，是至为关键。面对台海与区域安全威胁，除期待与美国与区域各方能有更多紧密合作，共同压制各种型态可能冲击安全单边行为，以维持区域和平稳定。也**感谢拜登政府以实际行动依据台湾关系法以及六项保证履行对台湾安全承诺，而拜登政府公布印太战略指台湾是重要伙伴**，而台湾不只是重要伙伴，更是最值得信任的伙伴，拥有更多支持的台湾将会更具贡献，她期待台美伙伴关系更加紧密，为印太区域与全世界和平稳定做出更多贡献。
+联合国称，自俄罗斯入侵以来，已有超过66万人逃离乌克兰。与此同时，生活在欧洲各地的数万名乌克兰人已经返回家园，与俄军作战。
 
-接着致词的穆伦说，在蔡总统有力领导下，不仅在台湾，区域和平的重要性更胜以往。他率领代表团是表达对美台伙伴关系的支持，在此关键时刻访台，如同拜登总统指民主面临艰难挑战，乌克兰即是，此刻更需要捍卫民主。他并肯定能访问世界上最具民主活力的地方之一，台湾无论对疫情与假讯息的挑战，在因应之余都能兼顾民主价值。
+据报道，乌克兰总统沃洛基米尔·泽伦斯基(Volodymyr Zelenskyy)呼吁 “乌克兰的每一位朋友，加入到保卫乌克兰、欧洲和世界的行列中”。乌克兰组建了一个外国战士军团，帮助保卫乌克兰。泽伦斯基说，乌克兰已经收到了希望加入国防军的人的 “数千份请求”。
 
-**穆伦还说，这次访团反映美国跨党派对台的强健支持，这并符合美国与全球利益，也说明美国继续反对片面改变现状行为，并持续支持符合台湾人民意愿与最佳方式和平解决两岸议题，透过访问也向区域伙伴传达美国坚定维持承诺。他并提到****4****月是台湾关系法签署****43****周年，拜登当年在议员任内投下赞成票，美台关系将比以往更能强健合作。**
+来自得克萨斯州的美国公民保罗（Aul）很快就报了名。他曾是第101空降师的一名伞兵，多次被派往伊拉克。当被问及为何为外国而战时，保罗毫不犹豫地回答: “我认为在这场危机中帮助乌克兰人民是我的道德义务。”
 
-**[接见拜登特使团 总统︰台湾有坚定防卫决心 期待与美更紧密合作](https://news.ltn.com.tw/news/politics/breakingnews/3845642)**
+根据美国国务院的规定，美国公民加入国际军团是合法的。但是，如果有人在美国境内被雇用，就可能发生违规行为。
 
-审核:Athena雅典娜 发布:Amitofu
+在接受采访时，保罗澄清说：“我们没有报酬。我们不是雇佣兵。我们不是为了任何形式的个人利益。”
+
+**32分钟前****  拜登在首份国情咨文中宣布****-美国将对所有俄罗斯飞机关闭其领空**
+
+拜登在周二发表的首份国情咨文中, 首先谈到了正在发生的乌克兰危机，同时宣布，美国效仿北约盟国在俄罗斯入侵乌克兰时采取的同样做法，将对所有俄罗斯飞机关闭其领空。
+
+拜登说：“今晚，我宣布，我们将与我们的盟友一起，对所有俄罗斯航班关闭美国领空，进一步孤立俄罗斯，给他们的经济增加额外的压力。”
+
+拜登认为俄罗斯总统普京“不知道会发生什么”，并称普京“严重失算 ”。
+
+他还强调说，美国正在向乌克兰提供军事和经济援助，但美国军队不会与俄罗斯军队交战。
+
+#### 1 小时前  拜登宣布美国将释放大量桶装石油以降低天然气价格
+
+拜登说，他正在采取 “强有力的行动”，以确保制裁针对俄罗斯的经济，并正在与30个国家合作，从世界各地释放6000万桶石油储备。
+
+拜登表示美国将从“战略石油储备中释放3000万桶”， 他认为“这些步骤将有助于降低国内的汽油价格”。
+
+**新闻来源： [Putin’s 40 miles of killing machines taunt Ukraine’s capital: LIVE UPDATES](https://www.foxnews.com/live-news/russia-ukraine-war-day-6)**
 
  
 
