--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,24 +1,37 @@
 ---
-title: 关闭SWIFT对中国影响
+title: 俄SWIFT将被切断 加息难阻民众挤兑
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2091879/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2092085/)
 
-SWIFT绝对是中共的致命，而且香港瞬间就全完了。
+作者：香草山信息部 诺雅、 我不在這裡
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月28号，在美欧周六发表联合声明，同意将俄罗斯指定银行踢出SWIFT国际结算系统之后，俄罗斯央行立即将关键利率从9.5%提高到20% 。尽管采取了紧急措施，在俄各地仍然迅速出现银行挤兑的状况。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/截屏2022-03-01-下午11.35.41.png)
+据俄罗斯央行称，大幅提高利率，是为了 “支持金融和价格稳定，并保护公民的储蓄不受贬值影响”。同时，将释放7330亿卢布的本地银行储备，以提高货币流动性。另外，俄罗斯央行和财政部表示，将命令俄罗斯出口公司在市场上出售其80%的外汇收入。
 
-**【郭先生直播摘要】**** 2022.2.267 ****关闭****SWIFT****对中国影响**
+这一系列举措显示出俄央行对银行挤兑的担忧。事实上，在各大城市的自动取款机上，已经出现了排长队提取现金的情况。某购物中心一台ATM机前大约排了70人，目击者说，取款机的钱在40分钟内就被取完了。
 
-**郭先生：**
+据悉，俄罗斯现有约6300亿美元的外汇储备，为有史以来的最高水平。分析人士认为，这有助于抵御制裁和出口创汇的损失。但如果海外资产被冻结，俄罗斯的货币金融系统将出现灾难性的后果。截至目前，卢布兑美元持续跌至1美元兑119.50卢布，较上周五收市时贬值45%。
 
-大家看到SWIFT整个系统，它不仅仅是一个支付系统，它最重要的事情是对整个国家信用评级。那对中共国什么概念？我给大家举个例子，一个中国银行要不让用SWIFT中国银行立马死，它不但没了，它所有的海外贷款，所有借款都得暂时停下来。中国银行在国际上的业务二十八万亿美元，所有的中国的所谓的建行、招商银行、农业银行，这是上市公司、上市银行立马几乎跌到零。
+参考链接：
+1）[https://gettr.com/post/px96e83d78](https://gettr.com/post/px96e83d78)
+2）[https://gettr.com/post/px90jk1da2](https://gettr.com/post/px90jk1da2)
+3）[Russia central bank more than doubles key interest rate to 20% to boost sinking ruble](https://www.cnbc.com/2022/02/28/russia-central-bank-hikes-interest-rates-to-20percent-from-9point5percent-to-bolster-ruble.html)
+4）[Russia’s central bank doubles interest rates to 20% as ruble plunges over sanctions](https://www.yahoo.com/news/russian-central-bank-scrambles-respond-062443584.html)
 
-你是请来了所有人来开Party，我把你火给熄了。今天的Party成为你的噩梦，一切都将结束。只要SWIFT系统一说干掉，共产党必死无疑。韩正就得掐死习近平，你放心韩正在外面的钱最起码几百亿美元。你知道SWIFT停了以后啥感觉吗？韩正第一个把他弄死，因为现在他的八百亿所有的钱，里面投资来投资去各种金融操作，都跟上海帮马云、阿里巴巴、恒大房地产、上石、上海信托都连在一起瞬间就变成零。SWIFT绝对是中共的致命，而且香港瞬间就全完了。香港的四大不要脸瞬间就变成画皮了，飘落在地上。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/三月小图.png)
 
-关于SWIFT这个网有什么弊？对共产党SWIFT有两个级别，一个就是我们说的断网。你啥都没了，就不让你用了断网了。第二个我有条件的限制性的某种货币让你交易。但我觉得美国一定给它断网的，而且我觉得美国对中共SWIFT制裁的时候，一定是三件事一起干。
+总编：Zion文恩
+编辑：宁文静
+校正/发稿：呼吸的雾霾（文小呼吸）
 
-第一件事查封你所有海外的所谓共产党的国有资产和中共领导人资产。一定不会像对俄罗斯一样，习近平也不可能开账号，习近平的还有韩正这帮孙子所有家人的账号肯定给他封了。个人资产，整个个人财富全封，断网和个人财富全封。第三个是干什么事情呢？对老共更加狠的，把互联网整个互联网给它断了。
-
-视频剪辑：GC |听写：雨山溪桥客|翻译：Arthur | 校对：烟波浩淼 | 视频制作+字幕：刀锋舞者 | 编辑：昆汀 | 发布：断播
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
