--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,83 +1,31 @@
 ---
-title: 也许是时候世界支持台湾合法政府的独立了
+title: 美财政部：禁与俄中央银行交易 制裁俄财富主要来源
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2091836/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2092083/)
 
-参议员马可.卢比奥： 由于 [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) [#China](https://twitter.com/hashtag/China?src=hashtag_click) 支持承认俄罗斯在 [#乌克兰](https://twitter.com/hashtag/%E4%B9%8C%E5%85%8B%E5%85%B0?src=hashtag_click) [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hashtag_click) 的傀儡的独立，也许是时候世界支持 [#台湾](https://twitter.com/hashtag/%E5%8F%B0%E6%B9%BE?src=hashtag_click) [#Taiwan](https://twitter.com/hashtag/Taiwan?src=hashtag_click) 合法政府的独立了
+作者：东京方舟农场-感谢郭叔；香草山金融部-ILOVE战神
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月28日，在与盟国和合作伙伴的协调下，美国财政部外国资产控制办公室OFAC限制了俄罗斯中央银行、俄罗斯主权财富基金和俄罗斯财政部获得数十亿美元资产。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/截屏2022-03-01-下午11.35.28.png)
+这一行动将在财政上限制俄罗斯维持其战争的能力，进一步打击已经迅速贬值的卢布，并贯彻了美国与合作伙伴及盟友在2月26日做出的承诺，即采取限制性措施，防止俄罗斯联邦中央银行通过部署其国际储备削弱美国制裁的影响。
 
+财政部同时制裁了三家与俄罗斯主权财富基金关系密切的实体：俄罗斯直接投资基金RDIF、俄罗斯直接投资基金的股份公司管理公司JSC RDIF，以及有限责任公司RVC管理公司 LLC RVC。并对普京的亲密好友，RDIF和JSC RDIF的CEO——基里尔·德米特里耶夫——进行个人制裁。
 
+参考链接：[Treasury Prohibits Transactions with Central Bank of Russia and Imposes Sanctions on Key Sources of Russia’s Wealth](https://home.treasury.gov/news/press-releases/jy0612)
 
-> Since [#China](https://twitter.com/hashtag/China?src=hash&amp;ref_src=twsrc%5Etfw) supports recognizing the independence of Russian puppets in [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hash&amp;ref_src=twsrc%5Etfw) maybe its time the world supports the independence of the legitimate government of [#Taiwan](https://twitter.com/hashtag/Taiwan?src=hash&amp;ref_src=twsrc%5Etfw)
-> — Marco Rubio (@marcorubio) [March 2, 2022](https://twitter.com/marcorubio/status/1498825760924176391?ref_src=twsrc%5Etfw)
+![](https://assets.gnews.org/wp-content/uploads/2022/03/三月小图.png)
 
+总编：Zion文恩
+编辑：飞虹
+校正/发稿：呼吸的雾霾（文小呼吸）
 
-
-参议员玛莎·布莱克本： 在对乌克兰采取了令人发指的行动后，俄罗斯不配获得联合国安理会的席位。
-
-
-
-> Russia does not deserve a seat on the UN Security Council after its egregious actions toward Ukraine. [pic.twitter.com/qz24oQcHMK](https://t.co/qz24oQcHMK)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 2, 2022](https://twitter.com/MarshaBlackburn/status/1498829680509693954?ref_src=twsrc%5Etfw)
-
-
-
-参议员玛莎.布莱克本： 联合国必须剥夺俄罗斯在安理会的否决权。
-
-
-
-> The UN must strip Russia of its ability to veto in the security council.
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 1, 2022](https://twitter.com/MarshaBlackburn/status/1498787977719431172?ref_src=twsrc%5Etfw)
-
-
-
-拜登总统： 普京总统认为他可以顺利挺进乌克兰——世界将会接受。 相反，他遇到了他从未想到过的强力阻击。 他遇到了(强大的)乌克兰人民。
-
-
-
-> President Putin thought he could roll into Ukraine — and the world would roll over.
->  
-> Instead, he met a wall of strength he never imagined.
->  
-> He met the Ukrainian people.
-> — President Biden (@POTUS) [March 2, 2022](https://twitter.com/POTUS/status/1498843134721150979?ref_src=twsrc%5Etfw)
-
-
-
-拜登总统： 美国司法部正在组建一个专门的工作组来追查俄罗斯寡头的罪行。 我们正与我们的欧洲盟友一起寻找并没收他们的游艇、豪华公寓和私人飞机。 我们不会放过他们的不义之财。
-
-
-
-> The U.S. Department of Justice is assembling a dedicated task force to go after the crimes of Russian oligarchs.
->  
-> We are joining with our European allies to find and seize their yachts, their luxury apartments, their private jets. 
->  
-> We are coming for their ill-begotten gains.
-> — President Biden (@POTUS) [March 2, 2022](https://twitter.com/POTUS/status/1498844556300886022?ref_src=twsrc%5Etfw)
-
-
-
-比尔·格茨: 拜登今晚没有提到要让 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 对传播导致大流行的 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 负责。[#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 放出致命病毒，是邪恶的，必须承担责任，否则北京将制造更多致命的瘟疫。
-
-
-
-> Biden tonight made no mention of holding Communst China accountable for spreading the virus that caused the pandemic. The CCP unleashed the deadly virus, is evil, and must be held responsible or Beijing will create even more deadly plagues
-> — Bill Gertz (@BillGertz) [March 2, 2022](https://twitter.com/BillGertz/status/1498854110472278016?ref_src=twsrc%5Etfw)
-
-
-
-参议员玛莎·布莱克本： 同意劳拉·英格拉汉姆[@IngrahamAngle](https://twitter.com/IngrahamAngle) – 拜登必须制裁 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 支持俄罗斯入侵乌克兰的行径。 俄罗斯、[#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click)、伊朗和北朝鲜是新的邪恶轴心国。 必须阻止他们。
-
-
-
-> Agree with [@IngrahamAngle](https://twitter.com/IngrahamAngle?ref_src=twsrc%5Etfw) – Biden must sanction Communist China for bolstering Russia’s invasion of Ukraine.
->  
-> Russia, China, Iran and North Korea are the new axis of evil.
->  
-> They must be stopped. [https://t.co/dmx0r74mcE](https://t.co/dmx0r74mcE)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [March 2, 2022](https://twitter.com/MarshaBlackburn/status/1498835382389125120?ref_src=twsrc%5Etfw)
-
-
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
