--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,29 +1,24 @@
 ---
-title: G7财长就加强对俄施压达成一致
+title: 视频&#124;万事达卡跟随制裁封锁多家俄罗斯金融机构
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2092012/)
+`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2092163/)
 
-![德国绿党和自民党党主席年纪只有四五十，新生代将撑起德国新内阁？_手机新浪网](https://n.sinaimg.cn/spider20211126/741/w1000h541/20211126/f0f5-dbb42a59a45b55ff08d6acf31858f9f4.jpg)德国财长林德纳（资料图）
-据共同社3月2日报道，日美欧七国集团（G7）1日在线召开财长和央行行长会议，就对进攻乌克兰的俄罗斯加强施压的方针达成了一致。日本财务相铃木俊一在会后召开记者会，围绕追加经济制裁称“今后也将迅速采取进一步行动”。
+制作：香草山视频部
 
-另据路透社称，轮值主席国德国的财长林德纳在会后召开记者会，介绍称“讨论了（对俄）实施何种追加措施可行”。林德纳称“希望在政治、财政和经济上孤立俄罗斯”。美国财长耶伦在声明中强调：“将与盟友协作，继续支持把俄主要银行排除在SWIFT之外。”
+信用卡公司万事达卡28日晚间证实，将跟随美国针对俄罗斯央行及多家主要银行进行金融制裁，停止对多家俄罗斯金融机构提供旗下网络服务，以回应俄罗斯早前对乌克兰发动的侵略战争。万事达卡表示，将在未来几天继续与监管机构合作，并承诺出于人道理由对乌克兰援助200万美元。
 
-近日俄罗斯宣称已接入中共国CIPS系统，以此绕开SWIFT系统。对于小粉红和五毛来说，怎么也想不到俄罗斯已开始洗劫自己和所有中共国老百姓的财富，吃草的日子不远了。西方国家已看清与普京狼狈为奸的中共才是背后最大的始作俑者，终究逃不了被制裁和诛杀的命运。
+自美欧联手将部分俄罗斯银行踢出SWIFT全球支付系统后，重挫卢布汇率，一度创下1美元兑120卢布的历史最低位，当地民众忧虑手中提款卡将失效，或可能被限制取款，纷纷到银行提款，发生严重挤兑。其后，俄罗斯政府出手干预救市，加上俄乌进行谈判的消息安抚了市场情绪，卢布跌幅暂时收窄至0.7%，1美元兑103.7卢布。
 
-新闻参考链接：[https://china.kyodonews.net/news/2022/03/c9b91f939a28-g7.html](https://china.kyodonews.net/news/2022/03/c9b91f939a28-g7.html)
+发稿：Daxia
 
-编辑：MQ
+![图片](https://media.discordapp.net/attachments/942386408801337424/948070260186161232/3.png?width=268&amp;height=369)
 
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
  
 
