--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,60 +1,33 @@
 ---
-title: 文•贵天成——文贵先生谈“普京”（十）
+title: 俄军炮击乌克兰第二大城市哈尔科夫居民区
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2091987/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2092155/)
 
-整理：BENJ1
-编辑：Kelly
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/03/1-7.png)图片来源：雅典娜设计组（614）
+整理：围剿维尼熊
+编辑：文泓
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/2-10.png)图片来源：Ynetnews & 雅典娜设计组
 
 
-郭文贵先生**2021**年**9**月**12**日直播
+根据路透社3月1日报道，乌克兰官员称，俄罗斯炮兵周一攻击了乌克兰第二大城市哈尔科夫的居民区，可能造成数十人死亡。莫斯科入侵部队遭遇乌克兰人的顽强抵抗。
 
-可以告诉大家，我今天爆的这个料，全地球全星空也不会有几个人知道，记住我今天爆的这个料：世界上最大的一单回扣、中介费，单笔的，地球有人类以来，有史以来，就是这个了。
+袭击发生时，俄罗斯和乌克兰官员正在白俄罗斯边境会晤，但会谈并未取得突破。
 
-中俄石油的回扣是多少钱呢？当年普京在上海，普京和习签的是4600亿美元，他的回扣是多少呢？总共拿了100亿美元，就没按比例拿，是100亿美元。
+此外，俄罗斯还面临着日益加深的国际孤立和国内经济动荡，西方国家联合谴责俄罗斯入侵乌克兰，并对其实施一系列制裁，这些制裁波及全世界，造成全球股市下跌，油价急升。
 
-郭文贵先生**2021**年**9**月**14**日直播
+俄罗斯的入侵未能取得普京所希望的决定性早期成果。位于乌克兰东北部第二大城市哈尔科夫已经成为一个主要战场，地区行政长官奥列格·西内古波表示，俄罗斯炮兵袭击了居民区，尽管那里并无乌克兰军队的营地或战略基础设施。他称至少有11人死亡。
 
-俄罗斯最早是普京说的，谁也不能强迫别人打疫苗。大家懂这意思了吗？能听我懂吧？我不能明说。他闺女打疫苗完全是假的，百分之百是假的，打的是胸腺肽、白蛋白。
+乌克兰政府此前表示，希望确保立即停火，并确保俄罗斯军队撤出。克里姆林宫拒绝就其目标置评。
 
-郭文贵先生**2021**年**9**月**20**日直播
+参考链接：[俄罗斯炮兵袭击乌克兰第二大城市](https://cn.reuters.com/article/ukraine-russia-bombing-0228-mon-idCNKBS2KY30J?il=0)
 
-我是昨天确认了，梅德耶夫和普京，肯定没打（疫苗）。咱们的这好几个俄罗斯的哥们确定，（他俩）肯定没打（疫苗）。
+*发布：tianzhihuan*
 
-郭文贵先生**2021**年**9**月**29**日直播
-
-强势的普京，可以这么说，符合俄罗斯的利益，我觉得普京是俄罗斯过去这几代领导人里干的最好的，而且普京是在德国呆过的，他对德国的文化很了解的，我深信未来影响欧洲最大的人物就是普京，你不能忽视这个人物。
-
-俄罗斯整个的天然气管道，整个西输管道被欧洲、被美国给叫停，这个问题搞了那么多年了，我觉得普京的时代一定会给你开启。普京要想达到整个东气西输，想用整个俄罗斯的石油来替代大部分中东的石油，特别是给德国和英国，德国这一届政党里面可能从亲中完全转向亲俄，而且俄国会对德国、对欧洲特别的示弱，但在能源上会大量的合作。
-
-郭文贵先生**2021**年**10**月**5**日直播
-
-昨天Facebook断网，一看那就是俄罗斯出手了，还用说吗？俄罗斯是告诉你，别跟我玩，你差的远着呢，老子一个屁都崩死你。普京真的是拔个汗毛都能把Facebook弄死个一万回，他敢出手，习不敢出手，共产党不敢出手。昨天就是俄罗斯干的，跟中国半毛钱关系没有。
-
-郭文贵先生**2021**年**11**月**28**日直播
-
-习对世界的认知是很狭隘的，甚至对事业、对政治、对能力是不自信的。但到了美国被奥巴马给羞辱之后，转驾俄罗斯，普京跟他结为战友，绝对的战友——“咱俩一起死磕，这个世界就是咱的了。”
-
-资料来源：郭先生GTV和盖特直播视频
-
-往期回顾：
-[文•贵天成——文贵先生谈“普京”（一）](https://gnews.org/zh-hans/1990454/)
-[文•贵天成——文贵先生谈“普京”（二）](https://gnews.org/zh-hans/1992091/)
-[文•贵天成——文贵先生谈“普京”（三）](https://gnews.org/zh-hant/1997918/)
-[文•贵天成——文贵先生谈“普京”（四）](https://gnews.org/zh-hans/1998162/)
-[文•贵天成——文贵先生谈“普京”（五）](https://gnews.org/zh-hans/1998174/)
-[文•贵天成——文贵先生谈“普京”（六）](https://gnews.org/zh-hans/1998177/)
-[文•贵天成——文贵先生谈“普京”（七）](https://gnews.org/zh-hans/2002397/)
-[文•贵天成——文贵先生谈“普京”（八）](https://gnews.org/zh-hans/2090925/)
-[文•贵天成——文贵先生谈“普京”（九）](https://gnews.org/zh-hans/2090993/)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
