--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 3小时前俄急剧变化
+title: 人权人性
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096790/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096842/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
