--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 中共宣传的南斯拉夫3个英雄的家人下场是什么
+title: 韩正对日本的态度
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096782/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096820/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
