--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 南斯拉夫的真相
+title: 七哥老家朋友打疫苗后的反应，中国人的政治
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096748/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096786/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
