--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人的毁人文化
+title: 韩正说习近平就是个傻X
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096811/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2096834/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
