--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,9 +1,9 @@
 ---
-title: 香港新增中共病毒超5.5万例 韩国超21.9万例 均创新高
+title: 日本驻乌克兰大使馆临时关闭
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2097042/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2097041/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/20220303-scaled.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3._3-scaled.jpg)
 *编辑：东京樱花团/简报小组
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
