--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,33 +1,57 @@
 ---
-title: 中俄在俄乌战争背后的勾当
+title: 【转】截至3.2 俄乌战事汇总（9）
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2096980/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2096938/)
 
-撰稿：西枫westca
+#### 采集：文洋
+![](https://assets.gnews.org/wp-content/uploads/2022/03/11-1.jpg)
+1. 乌克兰部队局部展开反攻，已夺下顿巴斯和基辅地区的数个村庄，相反俄罗斯除了终于成功占领赫尔松 (Kherson)外并沒有什么大动作
 
-校对：Ermat
-![](https://assets.gnews.org/wp-content/uploads/2022/03/unnamed-3.jpg)图片来源：网络照片
-纽约时报3月2日报道，中共要求俄罗斯将乌克兰战争推迟到冬奥会之后。 西方情报显示中共领导层对普京的战争计划有所了解。
+1. 乌克兰紧急情况部提醒谨慎处理可疑物品和敌方弹药。 不要试图拆卸或移动它们。
+2. 泽连斯基感谢投票支持要求入侵者从乌克兰领土撤出的国家。
+3. 俄罗斯代表团团长弗拉基米尔·梅丁斯基说，俄乌第二轮会谈将讨论停火问题。
+在2月28日的第一次会谈中，各方都表达了立场和建议。
+4. 乌克兰武装部队总参谋部表示，自入侵开始以来，俄罗斯已在乌克兰境内投放了 180 枚导弹。该数据截至 3 月 2 日 18:00。
+5. 乌克兰SSO向普京的俄军恶犬致意，并警告不要再有俄罗斯炮兵摧毁乌克兰的医院、幼儿园和住宅楼。
+6. 欧盟将采取措施确保加密货币不会游离于对俄制裁之外。
+7. 拜登在国会发表首次国情咨文，表示要制裁普京的所有盟友，包括寡头，没收他们的“游艇、豪华公寓和私人飞机”。在谈基建法案时，点了习近平的名字，说“和美国人民作对永远不是好赌注。
+8. 俄罗斯将不再有捷克啤酒。 由于乌克兰战争，所有主要的捷克制造商都拒绝供货。
+9. 甲骨文公司已暂停在俄罗斯的所有业务。
+供参考：甲骨文是全球第二大软件制造商，仅次于微软。
+10. 因受制裁影响，俄罗斯寡头阿布拉莫维奇出售切尔西足球俱乐部。
+11. 英国首相约翰逊于国会表示，俄军目前于乌克兰境內使用的武器种类及攻击平民的行为，完全构成战争罪行。约翰逊亦指普京低估乌克兰人及自由世界的团结和决心。英国会继续加強对俄罗斯的经济压力，并向乌克兰提供经济、军事及人道援助。
+12. 据国际文传电讯社：乌克兰总统和哈萨克斯坦总统进行了通话。
+13. 俄罗斯外交部部长拉夫罗夫表示，剥夺俄罗斯联合国安理会常任理事国地位的机制不存在。（卫星新闻）
+14. 美国官员：自周二以来，美国对乌克兰地面局势的评估没有发生重大变化。
+15. 市场消息：美国计划采取措施损害白俄罗斯和俄罗斯的国防部门。
+16. 美国官员：俄罗斯军队在乌克兰兵力稍有增加。
+17. 美国官员：俄罗斯军队仍然在基辅外围停滞不前。
+18. 美国官员：针对基辅的导弹和火炮数量有所增加。
+19. 美国官员：俄罗斯军队在南部取得一些进展。
+20. 美国官员：看到俄罗斯从四面八方逼近马里乌波尔。
+21. 美国官员：美国对赫尔松的情况的看法仍然存在分歧，尽管俄罗斯声称已经拿下了赫尔松。
+22. 美国官员：俄罗斯已经向乌克兰目标发射了450多枚导弹。
+23. 美国官员：俄罗斯在乌克兰仍未获得制空权。
+24. 美国官员：俄罗斯军队在乌克兰仍面临燃料和粮食方面的问题。
+25. 美国官员：无法确认俄罗斯是否使用了集束炸弹。
+26. 美国官员：有迹象显示，乌克兰抵抗力量试图减缓俄罗斯军队前往基辅的速度。
+27. 据国际文传电讯社：俄罗斯总统普京和以色列总理在通话中讨论了乌克兰问题。
+28. 美国官员：俄罗斯为乌克兰战争集结的军事力量中有82%投入战斗。
+29. 乌克兰总统顾问：目前已有7000多名俄罗斯士兵丧生。
+30. 乌克兰总统顾问：乌克兰俘虏了数百名俄罗斯士兵，其中包括高级军官。
+31. 据国际文传电讯社：俄罗斯外交部表示，可能将一名美国外交官驱逐出莫斯科，以报复美国驱逐其驻联合国外交官一事。
+32. 市场消息：乌克兰央行行长呼吁国际清算银行终止俄罗斯央行的成员资格。
+33. 市场消息：美国将对俄罗斯的出口管制措施扩大至白俄罗斯。
+34. 市场消息：美国将对俄罗斯国防实体实施全面制裁，将禁止22个俄罗斯国防相关实体。
+35. 乌克兰总统办公室负责人：基辅方面承认，关闭乌克兰领空可能会导致北约和俄罗斯之间的冲突升级并产生直接冲突。
+36. 俄罗斯驻土耳其大使：莫斯科就《蒙特勒公约》与安卡拉方面不断接触，深信一切利益都将得到尊重。
+37. 美国军方：美国高级将领与乌克兰同行举行了会谈，确认美国将继续提供支持的承诺。
+38. 法国总统马克龙：俄罗斯军队正在轰炸基辅。
+39. 法国总统马克龙：乌克兰未来的日子将越来越艰难。
+40. 法国总统马克龙：将继续努力与普京保持联系。
+41. 乌克兰内政部顾问：最近在火车站附近发生的火箭弹袭击可能会使基辅部分地区无法供暖。
+42. 乌克兰国家铁路公司：俄罗斯在基辅火车站附近实施空袭，阻止数千民众撤离。
 
-据拜登政府的高级官员和一名欧洲官员称，来自西方的情报报告称，中共国高级官员在2月初告诉俄罗斯高级官员，不要在北京冬奥会结束前入侵乌克兰。2月4日，普京在北京冬奥会开幕式前会见了俄国总统普京，并发表了一份5000字的声明，宣布他们的伙伴关系没有限制，谴责北欧扩张，并声称他们将建立一个真正的“民主”的全球新秩序。
-
-中俄官员之间交流的情报是保密的。它由一个西方情报机构收集，并被审查它的官员认为是可信的。美国和盟国政府的高级官员在讨论普京何时可能攻击乌克兰时，将其传阅。然而，不同的情报部门有不同的解释，目前还不清楚这些信息被广泛分享。
-
-一位熟悉情报的官员说，这些材料不一定表明有关入侵的谈话发生在习近平和普京的层面。其他了解情报的官员拒绝透露更多细节。由于情报的敏感性，官员们在谈到该报告时不愿透露姓名。当周三通过电子邮件问及中共官员是否敦促俄罗斯官员将入侵乌克兰的行动推迟到奥运会之后时，中国驻华盛顿大使馆发言人刘鹏宇说：”这些说法是毫无依据的猜测，目的是推卸责任和抹黑中国。”
-
-中共国在2月20日举行了奥运会的闭幕式。次日，国家电视台播放了普京和国家安全委员会的一次会议，以及他的一次长篇演讲，他说乌克兰应该是俄罗斯的一部分而不是作为一个国家存在。随后，普京命令更多的俄罗斯军队进入乌克兰东部一个叛乱分子控制的地区，2月24日俄罗斯军队开始全面入侵乌克兰，包括用弹道导弹、炮弹和坦克部队对乌克兰城市进行攻击。
-
-美国和欧洲官员表示，他们很难相信，普京的入侵是在奥运会刚刚结束时才开始，这不仅仅是巧合。整个冬天，俄罗斯将军事部队从与中国边界和东部其他地区转移到与乌克兰的边界和白俄罗斯，为入侵做准备。这些调动表明俄罗斯和中共官员之间存在着高度的信任。
-
-中国和俄罗斯多年来一直在加强其经济、外交和军事关系。在奥运会前夕习近平和普京在北京进行讨论之前，作为国家领导人共会面37次。两国在那次会议上发表的雄心勃勃的联合声明令美国和欧洲官员感到震惊，特别是因为这是中国第一次在有关北约和欧洲安全的问题上明确站在俄罗斯一边。欧洲领导人在最近几周谴责了中国和俄罗斯，包括在慕尼黑安全会议上的讲话。
-
-几个月来，一些美国官员试图拉拢中国，努力避免在乌克兰发生战争。在拜登总统于11月15日与习近平举行视频峰会的几天后，美国高级官员决定向中国高级官员提供有关俄罗斯在乌克兰周围增兵的情报，试图让他们劝说普京先生退让。美国人与中国驻华盛顿大使秦刚和外交部长王毅等人进行了交谈。在俄罗斯入侵前几小时前美国官员与中国大使在华盛顿举行了六次会晤，而中共官员表示对普京会入侵乌克兰表示怀疑。
-
-美国官员说，在12月的一次外交交流之后，美国官员收到的情报显示，北京与莫斯科分享了这些信息，并告诉俄罗斯人，美国正试图挑拨离间，中国不会试图阻碍俄罗斯的计划和行动。
-
-爆料革命郭文贵先生数月前已经警示世界，中俄两个独裁政权已经勾结在一起，会对世界带来极大危害。 希望世界能在这场俄乌战争中，真正站在正义一方。
-
-**新闻来源：**[China Asked Russia to Delay Ukraine War Until After Olympics, U.S. Officials Say – The New York Times (nytimes.com)](https://www.nytimes.com/2022/03/02/us/politics/russia-ukraine-china.html)
 
  
 
