--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,24 +1,44 @@
 ---
-title: 俄罗斯使用集束炸弹轰炸乌克兰第二大城市
+title: 俄罗斯银行挤兑开始 提醒所有人银行稳定性
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2096764/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2095820/)
 
-来源: [https://www.youtube.com/watch?v=gdSZBxiOW4c&feature=youtu.be](https://www.youtube.com/watch?v=gdSZBxiOW4c&amp;feature=youtu.be)、
+编译： Jenny Ball
 
-在乌克兰第二大城市发生了明显的暗杀企图。一枚导弹袭中了哈尔科夫的一座政府大楼。乌克兰现在受到来自多个方向的攻击。俄罗斯军队正在向首都基辅逼近。在这个时候，请看这张卫星照片。一个40英里长的俄罗斯车队就在首都基辅城外。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Loss-Money-Graph-Bankruptcy-Down-Negative-Lose.jpg)图片来源：naturalnews.com
 
-第六天的战斗正在进行中，乌克兰人为了。自己的生命和自由与俄罗斯的入侵者进行斗争。战争正在到来。首先让我们来请在利沃夫现场的迈克·托宾讲讲。迈克，我们看到那场袭击，对政府大楼的袭击。我知道它被描述为一次暗杀企图。那是其中一个斩首的事件。
+自然新闻(Natural News)  – 银行挤兑已经在俄罗斯开始了。随着俄罗斯银行与环球银行金融电信协会（SWIFT）的联系被切断，俄罗斯人涌向银行和ATMS。SWIFT这个国际系统是银行处理全球金融交易的主要信息网络，全球机构正在快速瞄准俄罗斯人。俄罗斯的整个银行都被“取消”了，但最终受苦的将是那里的人民。
 
-是的，当然，它看起来是精准的武器，就在那里。如果你看很近的地方，实际上可以看到爆炸物在大爆炸之前进入摄像头视野。所以它看起来确实是有目的。一个消息来源说。这是在试图除掉当地的领导人。因为它击中了区域行政大楼。没有关于这次袭击的伤亡消息。但是有很多伤亡。在哈尔科夫镇有很多伤亡。这是因为该镇确实受到了狂轰乱炸的火箭弹袭击。还有猛烈的集束炸弹袭击。据称在哈尔科夫也使用了集束炸弹。
+**人们对全球银行失去信心**
 
-什么是集束炸弹？它是一种在高空释放的炸弹并释放出一堆小炸弹。它可以扩散到一个足球场那么大的范围。大多数国家认为在战争中使用这种炸弹是非法的。简单来说因为你不可能防御所有的小炸弹。可能会击中市民特别是如果你在城市地区使用，就会有附带的伤害。而且这些炸弹并不全部都会爆炸，它们可能会在多年后意外爆炸。
+在世界各地，人们正在对传统的银行系统失去信心。当贾斯汀·特鲁多（Justin Trudeau）宣布对加拿大银行实行独裁控制，并开始抢劫私人银行账户时，加拿大人民的反应是大量从银行取钱。现在俄罗斯人正在为他们的钱而奔波，因为俄罗斯受到制裁，并与西方世界和国际银行卡特尔隔绝。
 
-你看到的是哈尔科夫以西的地方。奥赫蒂尔卡是一个城镇，那里有一个军事基地。我们有报告称该军事基地被炮火直接击中。造成约70名乌克兰士兵死亡。根据我们现在得到的消息在赫尔松的最南端，正在进行一场激烈的战斗。似乎目标是一座桥，横跨第聂伯河的一座桥。这座桥很关键因为它连接着大陆和克里米亚半岛。你知道俄国人已经在克里米亚半岛上加固了他们的阵地。
+由于俄罗斯银行与 SWIFT 隔绝，它们无法从其他银行转账或接收资金，这将停止外国交易和货币兑换。这不仅威胁到这些目标银行的偿付能力，而且还引发了对卢布可能很快崩盘的猜测。 2 月 28 日星期一，俄罗斯各地的人们排了几个小时的队从 ATM 机取钱。早在凌晨 5 点排队就开始了。
 
-当然，今天所有的目光都集中在这个40英里长的车队上。俄罗斯军队的供应和武器装备的车队，从与白俄罗斯的边界向南移动。我们没有太多关于这支车队的更新信息，只有最近的信息。当然是关于它的规模。还有卫星图像显示，在白俄罗斯边境的北部地区有补给直升机和步兵。
+由于欧洲也关闭了通往俄罗斯的领空，并停止现金流入，俄罗斯银行可能别无选择，只能加息。在短短几天内，卢布兑美元的汇率从 80 年代的低点升至 110 卢布兑1美元。
 
-翻译：烟波浩渺 | 校对：Polaris | 视频剪辑/制作： 烟波浩渺 | 编辑： FiLa文新心 | 编辑：断播
+**全球主义者以无辜平民为目标，夸大其词**
 
+目前，全球主义者正瞄准俄罗斯银行，并对俄罗斯人民发动战争。世界各地的人们都在了解到，这些机构对他们拥有巨大的权力，因为他们下意识地接受了培训，在所有涉及其财务安全的事务上都遵守规定。但是通过制裁整个银行，并针对无数无辜平民，全球主义者正在大肆渲染，并暴露其影响力的腐败和极权主义。
+
+全球主义者的战争般的行动，正在削弱公众对传统银行机构的信心，无论是在俄罗斯、加拿大、欧洲还是美国。通过冻结的银行账户，无辜平民被直接掠夺，或通过货币贬值间接被掠夺，他们希望收回他们的钱，并将其投资于他们拥有更多自主权，且货币具有更多有形价值的地方。
+
+（点评：这就是喜币出世和其双币设计的重大意义所在。）
+
+在世界各地，人们都知道他们的钱在传统银行系统中并不安全。如果这些政府和银行机构的负责人将您视为威胁，他们将追踪您的资金和资产，并禁止您进入他们的系统。俄罗斯人民正痛苦地意识到这一点。加拿大的人们也在见证它。
+
+加拿大政府的目标是针对任何在经济上支持医疗自由和身体自主权的人。加拿大政府正在使用疫苗命令将人们从公共生活中驱逐出去。当这些人为他们的生命、事业和未来而抗议时，加拿大政府会在没有正当程序的情况下没收他们的资产、逮捕、践踏和监禁他们。多年来，同样的道德和伦理困境在美国一直存在，因为 PayPal、YouTube、谷歌和 Facebook 等公司相互协调去平台化、去银行化和取消政治反对派，或关闭任何就医疗自由和疫苗选择等重要话题说真话的人。
+
+俄罗斯、加拿大和美国的攻击只是战争行为的开始，这将不可避免地导致世界各地人们开展业务和相互交易的方式发生巨大变化。
+
+**参考资料：**[naturalnews][Bank runs begin in Russia, serving as a reminder for ALL people to question the stability of all banks around the world](https://www.naturalnews.com/2022-02-28-bank-runs-begin-in-russia-people-question-stability-of-all-banks.html)
+
+* * *
+
+*审核：文乐*
+*校对：小东*
+*发稿：信心的选择*
+![]()
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
