--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,57 +1,23 @@
 ---
-title: 【转】截至3.2 俄乌战事汇总（9）
+title: 这是需要我们站起来的时刻
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2096938/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2096864/)
 
-#### 采集：文洋
-![](https://assets.gnews.org/wp-content/uploads/2022/03/11-1.jpg)
-1. 乌克兰部队局部展开反攻，已夺下顿巴斯和基辅地区的数个村庄，相反俄罗斯除了终于成功占领赫尔松 (Kherson)外并沒有什么大动作
+人们都在问这次是否会发展成冷战。但现实是这是一场热战。我的意思是，我们正在看到普京领导下的俄罗斯已经入侵了一个有效选举的民主和独立的国家。违反了国际法。当然也是对欧洲的一种威胁，也是对北约盟国的威胁，因此也是对美国的威胁。
 
-1. 乌克兰紧急情况部提醒谨慎处理可疑物品和敌方弹药。 不要试图拆卸或移动它们。
-2. 泽连斯基感谢投票支持要求入侵者从乌克兰领土撤出的国家。
-3. 俄罗斯代表团团长弗拉基米尔·梅丁斯基说，俄乌第二轮会谈将讨论停火问题。
-在2月28日的第一次会谈中，各方都表达了立场和建议。
-4. 乌克兰武装部队总参谋部表示，自入侵开始以来，俄罗斯已在乌克兰境内投放了 180 枚导弹。该数据截至 3 月 2 日 18:00。
-5. 乌克兰SSO向普京的俄军恶犬致意，并警告不要再有俄罗斯炮兵摧毁乌克兰的医院、幼儿园和住宅楼。
-6. 欧盟将采取措施确保加密货币不会游离于对俄制裁之外。
-7. 拜登在国会发表首次国情咨文，表示要制裁普京的所有盟友，包括寡头，没收他们的“游艇、豪华公寓和私人飞机”。在谈基建法案时，点了习近平的名字，说“和美国人民作对永远不是好赌注。
-8. 俄罗斯将不再有捷克啤酒。 由于乌克兰战争，所有主要的捷克制造商都拒绝供货。
-9. 甲骨文公司已暂停在俄罗斯的所有业务。
-供参考：甲骨文是全球第二大软件制造商，仅次于微软。
-10. 因受制裁影响，俄罗斯寡头阿布拉莫维奇出售切尔西足球俱乐部。
-11. 英国首相约翰逊于国会表示，俄军目前于乌克兰境內使用的武器种类及攻击平民的行为，完全构成战争罪行。约翰逊亦指普京低估乌克兰人及自由世界的团结和决心。英国会继续加強对俄罗斯的经济压力，并向乌克兰提供经济、军事及人道援助。
-12. 据国际文传电讯社：乌克兰总统和哈萨克斯坦总统进行了通话。
-13. 俄罗斯外交部部长拉夫罗夫表示，剥夺俄罗斯联合国安理会常任理事国地位的机制不存在。（卫星新闻）
-14. 美国官员：自周二以来，美国对乌克兰地面局势的评估没有发生重大变化。
-15. 市场消息：美国计划采取措施损害白俄罗斯和俄罗斯的国防部门。
-16. 美国官员：俄罗斯军队在乌克兰兵力稍有增加。
-17. 美国官员：俄罗斯军队仍然在基辅外围停滞不前。
-18. 美国官员：针对基辅的导弹和火炮数量有所增加。
-19. 美国官员：俄罗斯军队在南部取得一些进展。
-20. 美国官员：看到俄罗斯从四面八方逼近马里乌波尔。
-21. 美国官员：美国对赫尔松的情况的看法仍然存在分歧，尽管俄罗斯声称已经拿下了赫尔松。
-22. 美国官员：俄罗斯已经向乌克兰目标发射了450多枚导弹。
-23. 美国官员：俄罗斯在乌克兰仍未获得制空权。
-24. 美国官员：俄罗斯军队在乌克兰仍面临燃料和粮食方面的问题。
-25. 美国官员：无法确认俄罗斯是否使用了集束炸弹。
-26. 美国官员：有迹象显示，乌克兰抵抗力量试图减缓俄罗斯军队前往基辅的速度。
-27. 据国际文传电讯社：俄罗斯总统普京和以色列总理在通话中讨论了乌克兰问题。
-28. 美国官员：俄罗斯为乌克兰战争集结的军事力量中有82%投入战斗。
-29. 乌克兰总统顾问：目前已有7000多名俄罗斯士兵丧生。
-30. 乌克兰总统顾问：乌克兰俘虏了数百名俄罗斯士兵，其中包括高级军官。
-31. 据国际文传电讯社：俄罗斯外交部表示，可能将一名美国外交官驱逐出莫斯科，以报复美国驱逐其驻联合国外交官一事。
-32. 市场消息：乌克兰央行行长呼吁国际清算银行终止俄罗斯央行的成员资格。
-33. 市场消息：美国将对俄罗斯的出口管制措施扩大至白俄罗斯。
-34. 市场消息：美国将对俄罗斯国防实体实施全面制裁，将禁止22个俄罗斯国防相关实体。
-35. 乌克兰总统办公室负责人：基辅方面承认，关闭乌克兰领空可能会导致北约和俄罗斯之间的冲突升级并产生直接冲突。
-36. 俄罗斯驻土耳其大使：莫斯科就《蒙特勒公约》与安卡拉方面不断接触，深信一切利益都将得到尊重。
-37. 美国军方：美国高级将领与乌克兰同行举行了会谈，确认美国将继续提供支持的承诺。
-38. 法国总统马克龙：俄罗斯军队正在轰炸基辅。
-39. 法国总统马克龙：乌克兰未来的日子将越来越艰难。
-40. 法国总统马克龙：将继续努力与普京保持联系。
-41. 乌克兰内政部顾问：最近在火车站附近发生的火箭弹袭击可能会使基辅部分地区无法供暖。
-42. 乌克兰国家铁路公司：俄罗斯在基辅火车站附近实施空袭，阻止数千民众撤离。
+我们知道的是，他（普京）已经公开表示，他的目标是统一苏联的地理领土。我们应该相信他说的。他正在集结并进行军事机动化，以此来威胁西方。对北约和美国都发表了非常威胁性的声明，以及他攻击一个对他没有威胁的国家的行为。
 
+显然他要实现他的企图。就是普京上次入侵乌克兰并吞并克里米亚的时候，他已经相信他认为他将从这届政府中得到的东西，并且看到了一个能够以最小的代价来做这件事的机会。我们需要从现在开始采取行动。
+
+普京会恪守他的话。这意味着每一个在前苏联影响下的国家，或实际上是其领土一部分的国家，都处于危险之中并成文一种威胁。这对美国的盟友构成了威胁。我想说他过去这些天发表的声明，威胁美国，威胁北约，还威胁我们的西方盟友。
+
+只有当他能够继续建设和加强他的军队才会有好的发展并且制裁能够对他产生影响时，我们的制裁必须针对技术。必须关注他建立军事网络的能力并进行制裁。他在超高音速武器方面所作的一切。他在网络攻击方面做了什么。他正在做的是发展地面部队以及他们的能力。所有这些都会受到影响，因为他需要西方的技术去做这些。我们需要确保他得不到。
+
+我不认为美国军队应该直接参与进来。但我们确实在这里发挥了非常重要的作用。我们应该向乌克兰提供情报使他们能更有效的保卫自己的国家。我们应该给他们提供致命的武器，是他们能够战斗。他们今天已经为他们的国家进行了非常令人印象深刻的战斗。这是一个有有效民主选举独立于俄罗斯的国家。这些事情对我们很重要。这是一个很好的机会让我们与民主国见站在一起。为他们提供他们所需的工具。捍卫他们自己的国家。
+
+普京已经非常公开地威胁西方和美国。他在入侵乌克兰前的演习中，特别包括核武器演习。这当然会使美国的城市处于危险之中。只要有一个国家的领导人违反国际法，公开用大规模毁灭性武器威胁全世界。我们正在进入一个非常困难和非常危险的时期。这是一个我们需要站起来的时刻。展示力量。确保普京回到他的盒子里。帮助阻止这种侵略行为并希望将世界带回到正如北约秘书长所说的欧洲和平的地区。
+
+视频听写/翻译/字幕：绒绒兔 | 视频剪辑/制作：烟波浩淼 | 编辑：FiLa文新心 | 发布：断播
 
  
 
