--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,51 +1,31 @@
 ---
-title: 入侵乌克兰后，俄罗斯受到了世界各地广泛的制裁（下）
+title: “天安门母亲”：承载八九六四之重并护佑新中国联邦六四之新生
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2096733/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2095816/)
 
-翻译：灭共文明
+作者：滴水穿石
+![2020年6月4日，部分六四难属在警方监视下到北京万安公募举行集体悼念活动。（天安门母亲提供图片）](https://gdb.voanews.com/284009E2-C1EA-405E-8772-F18FD3117E22_cx0_cy10_cw0_w1023_r1_s.jpg) 2020年6月4日，部分六四难属在警方监视下到北京万安公募举行集体悼念活动。图片来源：VOA
+母亲是一个亲切而美感的名字，在人类社会中充当一个 遵守上天旨意，繁衍生息孕育生命的角色，最受人敬重的地位 。然而， 在中共乌托帮从苏联引进邪恶势力进入中国的百年中，当中共从国民政府夺取政权之后，中国当代发生的历史悲惨事件，在全球有极大影响中的母亲形象，让我们从这些母亲的命运看清中共魔鬼的邪恶。
 
-编辑与校对：灭共文明、冰糖葫芦喵
+1989年6月3号晚到4日凌晨， 中共用军队坦克 在天安门10几万学生与市民使用坦克与机枪进行血淋淋的武力镇压，天安门附近所有的医院接收满了大批伤员与死者，医院的停尸房爆满血迹的尸体，连自行车棚都摆满了血肉模糊的尸体。
 
-**美国**
+中共运用军队在北京天安门广场血腥镇压十几万学生市民之后，中共政府运用警察的力量在全国挨个寻查所有参加64平抗议运动学生与平民。在上海、杭州几个大城市参与抗议运动的学生与平民先后被 中共秘密处决，这些数字比在天安门广场被屠杀的学生平民数字还要更多！
 
-**美国对俄罗斯央行和其他主要财富来源实施了制裁，禁止美国人参与任何涉及该银行、财政部和国家财富基金的交易**。**还将俄罗斯最大的两家银行**Sberbank (SBER.MM)和VTB Bank (VTBR.MM)的银行**资产赶出美国**。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20210315005390-4.jpg)图片来源：网络。
-**华盛顿正在实施出口管制，将限制俄罗斯获得维持其军事能力所需的半导体、计算机、电信、信息安全设备、激光和传感器。**
+想想在全国很多学生因为被秘密枪决，保守失踪的人数都不止十万！ 这些被失踪和枪决的学生与6月4日那一天被中共军队屠杀的几万学生与平民，他们的 母亲而成为有人性与亲情的中国人心中的**“**天安门母亲**”。**
 
-**美国和欧盟已经对俄罗斯能源和国防部门实施了制裁。**上周，华盛顿对负责建设俄罗斯北溪2号天然气管道的公司实施了制裁。另外，**美国已经对俄罗斯飞机关闭了领空。**
+这**“天安门母亲”群体**由中国人民大学丁子霖教授发起成立，丁子霖的儿子蒋捷连，在89-64的夜里，被一颗从背后穿透心脏从前胸钻出的子弹夺去了他17岁年轻的生命。从1994年起，**“天安门母亲”家属**群体每年都会联名致函中共政府为“六四事件”承担责任。
 
-**英国**
+笔者从友人的口述回忆：一家三口住在天安门广场旁边的一个民居建筑，儿子听到枪声不断，跑到窗口伸出脖子往广场观察，忽然对面扫射的弹头击中，脑袋中弹当场倒地。 父母看到孩子突然中弹倒地，那个血色恐怖之夜成夫妻俩一辈子的痛苦，那一夜，中弹而死亡的孩子母亲也成“天安门母亲”。
 
-**英国**与美国和欧盟一起，**禁止英国实体与俄罗斯央行、财政部和主权财富基金进行交易。**它已采取措施，阻止俄罗斯企业在英国发行可转让证券和货币市场工具，而且俄罗斯也不能在英国出售主权债务。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/英国1.jpg)图片来源：华尔街日报。
-英国已禁止多家俄罗斯银行通过英国获得英镑和清算支付。
+让我们回顾中国当代的“八九64＂运动，纪念在事件中被中共屠杀的不少于20万的学生和平民，特别是 因此而成为**“天安门母亲”** ，她们一直在寻找她们失踪的孩子。其中这些母亲也陆续离开了人间，我们活着有正义的人们应该为64学生运动正名，统计所有在64运动及后续被中共屠杀与被失踪的名单，以此例证中共的反人类罪行，以安慰**＂天安门＂母亲**，同以安抚逝去32年的六四亡灵。
 
-**英国**进一步实施措施，**大幅加强对俄罗斯的贸易限制。**这将包括**禁止电子、电信和航空航天等行业的一系列高端和关键技术设备和零部件的出口。**
+有一句谚语：**“他们试图把我们都埋了，但不知道我们其实是种子。”**
 
-英国还将出台立法，**限制俄罗斯国民在英国银行账户中的存款。**在英国银行的限额将是50,000英镑（66,860美元）。同样，**英国已经禁止俄罗斯飞机进入其领空。**
+64天安门大屠杀，表面貌是学生与大兵和中共官方对峙，人与坦克的对抗，但其本质内涵是民主与独裁、和平与暴力的抗争。这是华夏民族与独裁统治政权长达几十年的抗争，正义与邪恶势力的争战从未停息。“八九64”运动在全球产生的蝴蝶效应，如同一颗种子对世界产生的正道主义的影响力及异象深远。
 
-**日本**
+2020年6月4日成立的新中国联邦，是华夏人民的诺亚方舟，这个承载**64种子**的希望，**全球灭共，天道酬勤，中国的**政权必将回归到人民的手中，人类文明世界继以向前发展！新中国联邦与新中国联邦人势必在其中同行！
 
-日本首相岸田文雄周一表示，**日本正在加入对俄罗斯中央银行的国际制裁，限制与它的交易。 **
-
-**东京已经对半导体和其他高科技产品实施了出口管制，并暂停向一系列俄罗斯个人和实体发放签证。**
-
-**加拿大**
-
-周二，**加拿大对俄罗斯拥有的船只关闭了港口，**并表示正在**审查所有俄罗斯寡头和公司在该国的持股情况。**
-
-加拿大**此前**宣布了孤立俄罗斯的措施，包括**对普京总统实施制裁，对俄罗斯飞机关闭加拿大领空，禁止石油进口和禁止加拿大金融机构与俄罗斯中央银行交易。**
-
-**澳大利亞**
-
-**澳大利亚对俄罗斯实施了制裁，目标是其几位精英公民和立法者。**
-
-**新闻来源链接：**
-
-[Factbox: Russia hit with sanctions from around the world after Ukraine invasion | Reuters](https://www.reuters.com/markets/europe/russia-hit-with-sanctions-around-world-after-ukraine-invasion-2022-03-02/)
-
-
+校对发布：Shifter
 
  
 
