--- a/gnews/52.md
+++ b/gnews/52.md
@@ -1,83 +1,33 @@
 ---
-title: 《避风港Haven》直播内容精选（第十四集·上）
+title: 班农先生呼吁中国卡车司机为自由而战
 ---
-`喜马拉雅纽约磐石农场` [轉載自GNews](https://gnews.org/zh-hans/2082284/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2072012/)
 
-[**《避风港 Haven》（14）Eglise医生分享解读有关中共病毒疫苗的新闻，加拿大死亡和住院病例中，70%都接种了疫苗**](https://www.gettr.com/post/pwlpx22581)
-**风起云涌**
+作者：香草山健身部-新世界的一员
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+班农先生是我们新中国联邦伟大的创始人之一，他是个虔诚的信徒，心地善良，智勇兼备，是我们坚决灭共的紧密盟友，他一直把中国人和中国人民分开，他说中国人民是世界上最勤劳最善良的民族，是被反人类的独裁共产党奴役着的人民，中国共产党不等于中国人。
 
-加拿大政府数据显示，近期接近 70% 的新冠肺炎死亡病例是“完全接种疫苗”的公民。加拿大政府公布的官方数据证实，完全接种疫苗的人群占这些新增死亡人数的大部分，确切地说是每10 人中有 7 人。**证明加拿大正处于“完全接种疫苗的大流行”之中**。
+2022/2/25他在战斗室谈加的自由车队得到了來自Vigano大主教的支援，他说他1000%認同，他认为Vigano大主教在世界经济论坛和达沃斯党的問題上是世界上最聰明的人之一在教会问题上只有香港的樞機主教陳日君在他之上，他完全懂得共产党的事。
 
-尽管加拿大政府试图掩盖新冠疫苗有效性的尴尬数据，但通过‘Way Back Machine’，还是看到了以前报告中公布的数字，按加拿大各地的疫苗接种状态计算出了当前真实的 COVID-19 病例、住院和死亡人数。通过分析，这些数据不但不支持政府之前说的新冠疫苗有效率和预防死亡均高达95%的说法，而且显示，近 70% 的新冠肺炎死亡病例是“完全接种疫苗”的公民。
+他还说我完全支持（加拿大）卡车司机，就像我支持这个新的正在美国西海岸形成的自由车队向东行驶，我想看到的是美国华裔卡车司机把他们的大卡车开到前沿去，因为我真正想看到的自由车队是中国的自由车队，如果來自老百姓的卡車司機說 “我們忍無可忍了”然后大家都把车开去北京，那麼中國共产党在30天內就會瓦解。
 
-1. **通过数据，分析人员将两个大的时间段的数据做减法，计算出了2022年1月16日-1月22日这7天期间，整个加拿大的新冠感染情况：**
+如果老百姓在后勤上卡住他们的脖子，他们撑不过30天就垮了，要记住，老百姓才是拥有一切权利的，他们只是没有意识到他们有权利，共产党只有9200万党员，真正有权利的只是极少数，绝大多数的共产党会转眼加入到老百姓的行列，老百姓才是拥有一切权利，他虔诚的祈祷，希望中国人能通过gnews，gtv，穿过防火墙，看到美国和加拿大发生的事，并且意识到，停断后勤补给链的权利完完全全在卡车司机他们手里，如果他们坚决不参与共产党的所作所为，就像掐断了共产党的喉咙，脖子，那共产党就结束了，中国共产党可能就会在30天内瓦解，没有任何东西能阻挡中国的自由车队。
 
+班农先生希望中国的卡车司机能看到这边的，澳大利亚的，世界各地的车队受到鼓舞，明白他们（对当权者的）危险性为其他行动要高1000倍，呼吁中国的卡车司机去站起来与中共对抗。
 
-- 七天共记录了206048例感染者，其中未接种者120,938例，占感染者的59%；已接种疫苗者41%。不难看出，此数据已经完全否认了政府说的新冠疫苗有效率为95%的说法。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-57.jpg)
 
+审核/编辑/发稿:qiutian（邱甜）
 
-- 七天共记录新冠住院治疗人数 4,231 人，其中未接种疫苗者1,367人，部分接种208人，完全接种者2,656人。接种疫苗的人数占68%，也就是说每10个住院的人中，有7人是接种了疫苗的。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-12-at-10.08.22-PM-768x1076-7.png)
 
-
-- 七天总记录692人不幸死亡，其中未接种疫苗的有214人，部分接种的20人，完全接种的458人。意味着：接种疫苗后死亡的人数占所有死亡人数的69%。每10个死亡的人中，有7人接种了疫苗。完全否认了政府之前所说的：新冠疫苗预防死亡有效率高达95%的说法。
-
-
-**这些来自政府的官方数据已经血淋淋的证明了新冠疫苗不但不会降低新冠感染率，更不会降低死亡风险。它的高死亡率足以说明新冠疫苗并不是疫苗，它是实验性的生物制剂，是不折不扣的生化武器。**不论政府怎么试图掩饰，真实数据不会撒谎，真相终将会浮出水面。
-
-**2. 鲜活的数据，让疫苗真相渐近浮出。除了我们爆料革命的战友以外，还有很多正义人士发布各种数据来揭露新冠疫苗的真相。这里有几个数据非常值得关注，我们一起来看看：**
-
-- 自推出疫苗以来，殡葬业务一直非常好，该股在2021 年上涨了 106%。这很令人震惊，因为美国89% 的殡仪馆都是私人的。我们看到的是冰山一角。这是上市公司在 2 月中旬报告2021年的第四季度。
-
-
-- 到 2021 年 6 月 1 日，佛蒙特州 71% 的人口都接种了疫苗！ 是他们成年人口的 83%，但该州现在看到的死亡人数是自大流行以来最多的！仅在过去13 周内，就有约 107,700 名老年人的死亡率高于正常水平。尽管疫苗接种率高达 98.7%。
-
-
-- 人寿保险公司RGA数据：死于“Covid”的年轻人比例在 2021 年第二季度开始上升**。**另外，之前我们节目中也报道过一条新闻，保险公司 One America 的首席执行官表示，18-64 岁人群的死亡率比大流行前水平高出惊人的 40%。
-
-
-- 网上流传一张殡仪馆车辆的照片，车身上标语呼吁“不要打疫苗”！可想而知，他们看到的真相可能已经超出你的想象。另外，我们战友也看到推特上有人爆料现在渥太华市的殡仪馆死人太多处理不过来，好多尸体需要运去美国处理。
-
-
-**疫苗灾难的苗头开始在加拿大出现了！**
-
-**风平浪静**
-
-**阿司匹林的天然替代品物**
-
-- ** *柳树皮 White Willow Bark***
-- ***精氨酸Arginine***
-- ***姜黄素 Turmeric***
-- ***姜Ginger***
-- ***肉桂 Cinnamon***
-- ***卡宴椒 Cayenne Pepper***
-- ***维生素E Vitamin E***
-- ***其它食物牛油果，野果，辣椒，樱桃（Avocado, berries, chillies and cherries）***
-
-
-**[2022-2-22《避风港》第14集直播视频回放：疫苗死亡潮已经悄然开始](https://gtv.org/video/id=621541e008ba8a07b1a18fb0)**
-
-
-
-
-
-
-
-
-
-
-
-
-
-文案：Eglise医生/万物有灵
-
-听写：丹文
-
-视频剪辑：黑嫂子
-
-文稿整理：Gloria
-
-编辑发布：简单生活
-![](https://assets.gnews.org/wp-content/uploads/2022/01/磐石discord.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/b3df4b36-df11-4361-a8f5-6c7e5f9da569.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
