--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,39 +1,32 @@
 ---
-title: 大直播后记：惊险的救援故事
+title: 有声&#124;喜马拉雅币一周分析与总结（2月21日-2月27日）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2097230/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2097086/)
 
-#### 整理：文晋、大甜甜
-编辑：小红帽
+配音：香草山教育部 – Rose
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+过去一周，喜马拉雅币价格回落至40美元左右，平均日交易量约9万枚喜币。喜币上市以来总交易量约2940万枚 ，占今年总发行量仅约2.94%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/03/图片3-4.png)
+本周，据郭文贵先生在大直播中透露，喜贷款目前在法律的最后的研究阶段，会提供喜币大概不超过10%的抵押率，喜存款会有5%到10%的利息，每年通过HCN兑现。G保险会提供世界上最少有的、无条件支付的贴现保险。这些都会是战友主导的金融平台。
 
-图片来源：雅典娜农场设计组（614）
+郭先生还透露，中共央行等部门最近发布对于人民币5万元以上存款取款限制的根本原因就是防止资金流向喜币，喜联储。郭先生表示，中共限制金融活动的政策造成的恐惧将会形成“破窗效应”，让更多资金加速流向喜币。西方的投资机构将会看到，中国人的财富很难流向美国，欧洲，日本。新加坡和香港也不是安全存放财富的地方。最终自由流通的HPay和喜币将吸收中国人全部的财富。西方的“沼泽地”大佬将开始正视新中国联邦。
 
+郭先生还提到，喜币和HPay将会完全抵消世界上各种灾难造成的物价上涨和不确定性，并解决财富流通的不安全性。俄乌战争中，喜币和HPay将成为东欧国家安全、和平的捍卫者。
 
-未来大家都会看到，包括我们现在还不能说的，救的非我们的战友。
+文字版原文：[喜马拉雅币一周分析与总结（2月21日-2月27日）](https://gnews.org/zh-hans/2080465/)
 
-我们战友的家人是最早的几天前救出来了。这个是我们战友，对我们很重要，因为在最早的时候，这个战友在体制内给我们提供了很多绝密信息，从来没有要求过任何东西。就头两天说，七哥，能不能把我哥的独子给救出来？他说，我哥在过世前说过让我照顾好这孩子。这是咱战友的家人，我就马上就找出咱们的特殊力量去救。不幸的是，他所在的地方是被炸得最严重的地方，找不着了。还得找别人再找他，甚至可能他已经死掉了。但是太多巧合和偶然，我认为偶然和巧合多次重复就是天意，这是我的理解，你们不一定要参考。
+音频处理：呼吸的雾霾（文小呼吸）
+发稿：呼吸的雾霾（文小呼吸）
 
-后来找到了他和他的女朋友和女朋友家在一起。在现场，人家救援人员跟我联系说，我们现在把他带走，我们要用直升机，但是直升机也可能被打下来，这样我们全完蛋。你同不同意？我当时就傻眼了。他说，你赶快做决定。一个是我们开车走，也可能被炸死；一个是找个地方给他躲起来；一个是我们拿直升机救走。我说，我承担一切后果，赶快救走。等着大概30分左右直升机来了。然后在上直升机过程中，他家又加了2，3个人。飞机上一共就只能坐7个人，去救的人是3个人，那这他有人得下来。咱那个战友的家人呢，这小孩不太懂事，非要带着他所谓的朋友的朋友。结果人家救人那边说，我留下来一个，你们上去。飞机上了8个人，这是不允许的。没有孩子，都是成年人。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1-1.png)
 
-这飞机就飞走了，人给救出去了，安全到现场。人家说，我们救得很顺利。 现在各种情报发现和当时并不一样，我们想把那个人再救回来。我说，你只要把那救人团队的人再救回来，我今天按你救援费用的3倍付。结果他又回去，那个人又发现了四五个人又救了回去了。这是几天前的事。
-
-你知道救援的那个人跟我说句什么话吗？他说，我们曾经问中国驻乌克兰大使馆，如果有人愿意帮你救人的话，收多少钱？当时是6000美金一辆大巴车送往罗马尼亚。中国大使馆的人，你知道都说什么吗？他说，我们预算最多最多也就是1000多美金。你听说过中国大使馆，救人只愿意花1000美金，实际上要花6000美金。你知道吗？我们要给人家直升机多少钱？10万美元。我加3倍就是30万美元。这跟咱任何没有关系，这是救援基金出的。
-
-兄弟姐妹，你知道这种偶然性吗？你知道他被救完以后，不到2小时，那个地方就给炸平了。你从边境过来一说，你是救援的，新中国联邦救援，人对你就和颜悦色。它是人的本能。
-
-参考资料：[郭文贵先生2022年3月2日大直播](https://gtv.org/video/id=621f6ab7019ef64da653b4fe)
-
-*发布：wenly*
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
