--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,24 +1,32 @@
 ---
-title: 俄罗斯使用集束炸弹轰炸乌克兰第二大城市
+title: 有声&#124;喜马拉雅币一周分析与总结（2月21日-2月27日）
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2096764/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2097086/)
 
-来源: [https://www.youtube.com/watch?v=gdSZBxiOW4c&feature=youtu.be](https://www.youtube.com/watch?v=gdSZBxiOW4c&amp;feature=youtu.be)、
+配音：香草山教育部 – Rose
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+过去一周，喜马拉雅币价格回落至40美元左右，平均日交易量约9万枚喜币。喜币上市以来总交易量约2940万枚 ，占今年总发行量仅约2.94%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
 
-在乌克兰第二大城市发生了明显的暗杀企图。一枚导弹袭中了哈尔科夫的一座政府大楼。乌克兰现在受到来自多个方向的攻击。俄罗斯军队正在向首都基辅逼近。在这个时候，请看这张卫星照片。一个40英里长的俄罗斯车队就在首都基辅城外。
+本周，据郭文贵先生在大直播中透露，喜贷款目前在法律的最后的研究阶段，会提供喜币大概不超过10%的抵押率，喜存款会有5%到10%的利息，每年通过HCN兑现。G保险会提供世界上最少有的、无条件支付的贴现保险。这些都会是战友主导的金融平台。
 
-第六天的战斗正在进行中，乌克兰人为了。自己的生命和自由与俄罗斯的入侵者进行斗争。战争正在到来。首先让我们来请在利沃夫现场的迈克·托宾讲讲。迈克，我们看到那场袭击，对政府大楼的袭击。我知道它被描述为一次暗杀企图。那是其中一个斩首的事件。
+郭先生还透露，中共央行等部门最近发布对于人民币5万元以上存款取款限制的根本原因就是防止资金流向喜币，喜联储。郭先生表示，中共限制金融活动的政策造成的恐惧将会形成“破窗效应”，让更多资金加速流向喜币。西方的投资机构将会看到，中国人的财富很难流向美国，欧洲，日本。新加坡和香港也不是安全存放财富的地方。最终自由流通的HPay和喜币将吸收中国人全部的财富。西方的“沼泽地”大佬将开始正视新中国联邦。
 
-是的，当然，它看起来是精准的武器，就在那里。如果你看很近的地方，实际上可以看到爆炸物在大爆炸之前进入摄像头视野。所以它看起来确实是有目的。一个消息来源说。这是在试图除掉当地的领导人。因为它击中了区域行政大楼。没有关于这次袭击的伤亡消息。但是有很多伤亡。在哈尔科夫镇有很多伤亡。这是因为该镇确实受到了狂轰乱炸的火箭弹袭击。还有猛烈的集束炸弹袭击。据称在哈尔科夫也使用了集束炸弹。
+郭先生还提到，喜币和HPay将会完全抵消世界上各种灾难造成的物价上涨和不确定性，并解决财富流通的不安全性。俄乌战争中，喜币和HPay将成为东欧国家安全、和平的捍卫者。
 
-什么是集束炸弹？它是一种在高空释放的炸弹并释放出一堆小炸弹。它可以扩散到一个足球场那么大的范围。大多数国家认为在战争中使用这种炸弹是非法的。简单来说因为你不可能防御所有的小炸弹。可能会击中市民特别是如果你在城市地区使用，就会有附带的伤害。而且这些炸弹并不全部都会爆炸，它们可能会在多年后意外爆炸。
+文字版原文：[喜马拉雅币一周分析与总结（2月21日-2月27日）](https://gnews.org/zh-hans/2080465/)
 
-你看到的是哈尔科夫以西的地方。奥赫蒂尔卡是一个城镇，那里有一个军事基地。我们有报告称该军事基地被炮火直接击中。造成约70名乌克兰士兵死亡。根据我们现在得到的消息在赫尔松的最南端，正在进行一场激烈的战斗。似乎目标是一座桥，横跨第聂伯河的一座桥。这座桥很关键因为它连接着大陆和克里米亚半岛。你知道俄国人已经在克里米亚半岛上加固了他们的阵地。
+音频处理：呼吸的雾霾（文小呼吸）
+发稿：呼吸的雾霾（文小呼吸）
 
-当然，今天所有的目光都集中在这个40英里长的车队上。俄罗斯军队的供应和武器装备的车队，从与白俄罗斯的边界向南移动。我们没有太多关于这支车队的更新信息，只有最近的信息。当然是关于它的规模。还有卫星图像显示，在白俄罗斯边境的北部地区有补给直升机和步兵。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1-1.png)
 
-翻译：烟波浩渺 | 校对：Polaris | 视频剪辑/制作： 烟波浩渺 | 编辑： FiLa文新心 | 编辑：断播
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
