--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,44 +1,34 @@
 ---
-title: 俄罗斯银行挤兑开始 提醒所有人银行稳定性
+title: 中俄在俄乌战争背后的勾当
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2095820/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2096980/)
 
-编译： Jenny Ball
+撰稿：西枫westca
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Loss-Money-Graph-Bankruptcy-Down-Negative-Lose.jpg)图片来源：naturalnews.com
+校对：Ermat
+![](https://assets.gnews.org/wp-content/uploads/2022/03/unnamed-3.jpg)图片来源：网络照片
+纽约时报3月2日报道，中共要求俄罗斯将乌克兰战争推迟到冬奥会之后。 西方情报显示中共领导层对普京的战争计划有所了解。
 
-自然新闻(Natural News)  – 银行挤兑已经在俄罗斯开始了。随着俄罗斯银行与环球银行金融电信协会（SWIFT）的联系被切断，俄罗斯人涌向银行和ATMS。SWIFT这个国际系统是银行处理全球金融交易的主要信息网络，全球机构正在快速瞄准俄罗斯人。俄罗斯的整个银行都被“取消”了，但最终受苦的将是那里的人民。
+据拜登政府的高级官员和一名欧洲官员称，来自西方的情报报告称，中共国高级官员在2月初告诉俄罗斯高级官员，不要在北京冬奥会结束前入侵乌克兰。2月4日，普京在北京冬奥会开幕式前会见了俄国总统普京，并发表了一份5000字的声明，宣布他们的伙伴关系没有限制，谴责北欧扩张，并声称他们将建立一个真正的“民主”的全球新秩序。
 
-**人们对全球银行失去信心**
+中俄官员之间交流的情报是保密的。它由一个西方情报机构收集，并被审查它的官员认为是可信的。美国和盟国政府的高级官员在讨论普京何时可能攻击乌克兰时，将其传阅。然而，不同的情报部门有不同的解释，目前还不清楚这些信息被广泛分享。
 
-在世界各地，人们正在对传统的银行系统失去信心。当贾斯汀·特鲁多（Justin Trudeau）宣布对加拿大银行实行独裁控制，并开始抢劫私人银行账户时，加拿大人民的反应是大量从银行取钱。现在俄罗斯人正在为他们的钱而奔波，因为俄罗斯受到制裁，并与西方世界和国际银行卡特尔隔绝。
+一位熟悉情报的官员说，这些材料不一定表明有关入侵的谈话发生在习近平和普京的层面。其他了解情报的官员拒绝透露更多细节。由于情报的敏感性，官员们在谈到该报告时不愿透露姓名。当周三通过电子邮件问及中共官员是否敦促俄罗斯官员将入侵乌克兰的行动推迟到奥运会之后时，中国驻华盛顿大使馆发言人刘鹏宇说：”这些说法是毫无依据的猜测，目的是推卸责任和抹黑中国。”
 
-由于俄罗斯银行与 SWIFT 隔绝，它们无法从其他银行转账或接收资金，这将停止外国交易和货币兑换。这不仅威胁到这些目标银行的偿付能力，而且还引发了对卢布可能很快崩盘的猜测。 2 月 28 日星期一，俄罗斯各地的人们排了几个小时的队从 ATM 机取钱。早在凌晨 5 点排队就开始了。
+中共国在2月20日举行了奥运会的闭幕式。次日，国家电视台播放了普京和国家安全委员会的一次会议，以及他的一次长篇演讲，他说乌克兰应该是俄罗斯的一部分而不是作为一个国家存在。随后，普京命令更多的俄罗斯军队进入乌克兰东部一个叛乱分子控制的地区，2月24日俄罗斯军队开始全面入侵乌克兰，包括用弹道导弹、炮弹和坦克部队对乌克兰城市进行攻击。
 
-由于欧洲也关闭了通往俄罗斯的领空，并停止现金流入，俄罗斯银行可能别无选择，只能加息。在短短几天内，卢布兑美元的汇率从 80 年代的低点升至 110 卢布兑1美元。
+美国和欧洲官员表示，他们很难相信，普京的入侵是在奥运会刚刚结束时才开始，这不仅仅是巧合。整个冬天，俄罗斯将军事部队从与中国边界和东部其他地区转移到与乌克兰的边界和白俄罗斯，为入侵做准备。这些调动表明俄罗斯和中共官员之间存在着高度的信任。
 
-**全球主义者以无辜平民为目标，夸大其词**
+中国和俄罗斯多年来一直在加强其经济、外交和军事关系。在奥运会前夕习近平和普京在北京进行讨论之前，作为国家领导人共会面37次。两国在那次会议上发表的雄心勃勃的联合声明令美国和欧洲官员感到震惊，特别是因为这是中国第一次在有关北约和欧洲安全的问题上明确站在俄罗斯一边。欧洲领导人在最近几周谴责了中国和俄罗斯，包括在慕尼黑安全会议上的讲话。
 
-目前，全球主义者正瞄准俄罗斯银行，并对俄罗斯人民发动战争。世界各地的人们都在了解到，这些机构对他们拥有巨大的权力，因为他们下意识地接受了培训，在所有涉及其财务安全的事务上都遵守规定。但是通过制裁整个银行，并针对无数无辜平民，全球主义者正在大肆渲染，并暴露其影响力的腐败和极权主义。
+几个月来，一些美国官员试图拉拢中国，努力避免在乌克兰发生战争。在拜登总统于11月15日与习近平举行视频峰会的几天后，美国高级官员决定向中国高级官员提供有关俄罗斯在乌克兰周围增兵的情报，试图让他们劝说普京先生退让。美国人与中国驻华盛顿大使秦刚和外交部长王毅等人进行了交谈。在俄罗斯入侵前几小时前美国官员与中国大使在华盛顿举行了六次会晤，而中共官员表示对普京会入侵乌克兰表示怀疑。
 
-全球主义者的战争般的行动，正在削弱公众对传统银行机构的信心，无论是在俄罗斯、加拿大、欧洲还是美国。通过冻结的银行账户，无辜平民被直接掠夺，或通过货币贬值间接被掠夺，他们希望收回他们的钱，并将其投资于他们拥有更多自主权，且货币具有更多有形价值的地方。
+美国官员说，在12月的一次外交交流之后，美国官员收到的情报显示，北京与莫斯科分享了这些信息，并告诉俄罗斯人，美国正试图挑拨离间，中国不会试图阻碍俄罗斯的计划和行动。
 
-（点评：这就是喜币出世和其双币设计的重大意义所在。）
+爆料革命郭文贵先生数月前已经警示世界，中俄两个独裁政权已经勾结在一起，会对世界带来极大危害。 希望世界能在这场俄乌战争中，真正站在正义一方。
 
-在世界各地，人们都知道他们的钱在传统银行系统中并不安全。如果这些政府和银行机构的负责人将您视为威胁，他们将追踪您的资金和资产，并禁止您进入他们的系统。俄罗斯人民正痛苦地意识到这一点。加拿大的人们也在见证它。
+**新闻来源：**[China Asked Russia to Delay Ukraine War Until After Olympics, U.S. Officials Say – The New York Times (nytimes.com)](https://www.nytimes.com/2022/03/02/us/politics/russia-ukraine-china.html)
 
-加拿大政府的目标是针对任何在经济上支持医疗自由和身体自主权的人。加拿大政府正在使用疫苗命令将人们从公共生活中驱逐出去。当这些人为他们的生命、事业和未来而抗议时，加拿大政府会在没有正当程序的情况下没收他们的资产、逮捕、践踏和监禁他们。多年来，同样的道德和伦理困境在美国一直存在，因为 PayPal、YouTube、谷歌和 Facebook 等公司相互协调去平台化、去银行化和取消政治反对派，或关闭任何就医疗自由和疫苗选择等重要话题说真话的人。
-
-俄罗斯、加拿大和美国的攻击只是战争行为的开始，这将不可避免地导致世界各地人们开展业务和相互交易的方式发生巨大变化。
-
-**参考资料：**[naturalnews][Bank runs begin in Russia, serving as a reminder for ALL people to question the stability of all banks around the world](https://www.naturalnews.com/2022-02-28-bank-runs-begin-in-russia-people-question-stability-of-all-banks.html)
-
-* * *
-
-*审核：文乐*
-*校对：小东*
-*发稿：信心的选择*
-![]()
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
