--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,31 +1,57 @@
 ---
-title: “天安门母亲”：承载八九六四之重并护佑新中国联邦六四之新生
+title: 【转】截至3.2 俄乌战事汇总（9）
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2095816/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2096938/)
 
-作者：滴水穿石
-![2020年6月4日，部分六四难属在警方监视下到北京万安公募举行集体悼念活动。（天安门母亲提供图片）](https://gdb.voanews.com/284009E2-C1EA-405E-8772-F18FD3117E22_cx0_cy10_cw0_w1023_r1_s.jpg) 2020年6月4日，部分六四难属在警方监视下到北京万安公募举行集体悼念活动。图片来源：VOA
-母亲是一个亲切而美感的名字，在人类社会中充当一个 遵守上天旨意，繁衍生息孕育生命的角色，最受人敬重的地位 。然而， 在中共乌托帮从苏联引进邪恶势力进入中国的百年中，当中共从国民政府夺取政权之后，中国当代发生的历史悲惨事件，在全球有极大影响中的母亲形象，让我们从这些母亲的命运看清中共魔鬼的邪恶。
+#### 采集：文洋
+![](https://assets.gnews.org/wp-content/uploads/2022/03/11-1.jpg)
+1. 乌克兰部队局部展开反攻，已夺下顿巴斯和基辅地区的数个村庄，相反俄罗斯除了终于成功占领赫尔松 (Kherson)外并沒有什么大动作
 
-1989年6月3号晚到4日凌晨， 中共用军队坦克 在天安门10几万学生与市民使用坦克与机枪进行血淋淋的武力镇压，天安门附近所有的医院接收满了大批伤员与死者，医院的停尸房爆满血迹的尸体，连自行车棚都摆满了血肉模糊的尸体。
+1. 乌克兰紧急情况部提醒谨慎处理可疑物品和敌方弹药。 不要试图拆卸或移动它们。
+2. 泽连斯基感谢投票支持要求入侵者从乌克兰领土撤出的国家。
+3. 俄罗斯代表团团长弗拉基米尔·梅丁斯基说，俄乌第二轮会谈将讨论停火问题。
+在2月28日的第一次会谈中，各方都表达了立场和建议。
+4. 乌克兰武装部队总参谋部表示，自入侵开始以来，俄罗斯已在乌克兰境内投放了 180 枚导弹。该数据截至 3 月 2 日 18:00。
+5. 乌克兰SSO向普京的俄军恶犬致意，并警告不要再有俄罗斯炮兵摧毁乌克兰的医院、幼儿园和住宅楼。
+6. 欧盟将采取措施确保加密货币不会游离于对俄制裁之外。
+7. 拜登在国会发表首次国情咨文，表示要制裁普京的所有盟友，包括寡头，没收他们的“游艇、豪华公寓和私人飞机”。在谈基建法案时，点了习近平的名字，说“和美国人民作对永远不是好赌注。
+8. 俄罗斯将不再有捷克啤酒。 由于乌克兰战争，所有主要的捷克制造商都拒绝供货。
+9. 甲骨文公司已暂停在俄罗斯的所有业务。
+供参考：甲骨文是全球第二大软件制造商，仅次于微软。
+10. 因受制裁影响，俄罗斯寡头阿布拉莫维奇出售切尔西足球俱乐部。
+11. 英国首相约翰逊于国会表示，俄军目前于乌克兰境內使用的武器种类及攻击平民的行为，完全构成战争罪行。约翰逊亦指普京低估乌克兰人及自由世界的团结和决心。英国会继续加強对俄罗斯的经济压力，并向乌克兰提供经济、军事及人道援助。
+12. 据国际文传电讯社：乌克兰总统和哈萨克斯坦总统进行了通话。
+13. 俄罗斯外交部部长拉夫罗夫表示，剥夺俄罗斯联合国安理会常任理事国地位的机制不存在。（卫星新闻）
+14. 美国官员：自周二以来，美国对乌克兰地面局势的评估没有发生重大变化。
+15. 市场消息：美国计划采取措施损害白俄罗斯和俄罗斯的国防部门。
+16. 美国官员：俄罗斯军队在乌克兰兵力稍有增加。
+17. 美国官员：俄罗斯军队仍然在基辅外围停滞不前。
+18. 美国官员：针对基辅的导弹和火炮数量有所增加。
+19. 美国官员：俄罗斯军队在南部取得一些进展。
+20. 美国官员：看到俄罗斯从四面八方逼近马里乌波尔。
+21. 美国官员：美国对赫尔松的情况的看法仍然存在分歧，尽管俄罗斯声称已经拿下了赫尔松。
+22. 美国官员：俄罗斯已经向乌克兰目标发射了450多枚导弹。
+23. 美国官员：俄罗斯在乌克兰仍未获得制空权。
+24. 美国官员：俄罗斯军队在乌克兰仍面临燃料和粮食方面的问题。
+25. 美国官员：无法确认俄罗斯是否使用了集束炸弹。
+26. 美国官员：有迹象显示，乌克兰抵抗力量试图减缓俄罗斯军队前往基辅的速度。
+27. 据国际文传电讯社：俄罗斯总统普京和以色列总理在通话中讨论了乌克兰问题。
+28. 美国官员：俄罗斯为乌克兰战争集结的军事力量中有82%投入战斗。
+29. 乌克兰总统顾问：目前已有7000多名俄罗斯士兵丧生。
+30. 乌克兰总统顾问：乌克兰俘虏了数百名俄罗斯士兵，其中包括高级军官。
+31. 据国际文传电讯社：俄罗斯外交部表示，可能将一名美国外交官驱逐出莫斯科，以报复美国驱逐其驻联合国外交官一事。
+32. 市场消息：乌克兰央行行长呼吁国际清算银行终止俄罗斯央行的成员资格。
+33. 市场消息：美国将对俄罗斯的出口管制措施扩大至白俄罗斯。
+34. 市场消息：美国将对俄罗斯国防实体实施全面制裁，将禁止22个俄罗斯国防相关实体。
+35. 乌克兰总统办公室负责人：基辅方面承认，关闭乌克兰领空可能会导致北约和俄罗斯之间的冲突升级并产生直接冲突。
+36. 俄罗斯驻土耳其大使：莫斯科就《蒙特勒公约》与安卡拉方面不断接触，深信一切利益都将得到尊重。
+37. 美国军方：美国高级将领与乌克兰同行举行了会谈，确认美国将继续提供支持的承诺。
+38. 法国总统马克龙：俄罗斯军队正在轰炸基辅。
+39. 法国总统马克龙：乌克兰未来的日子将越来越艰难。
+40. 法国总统马克龙：将继续努力与普京保持联系。
+41. 乌克兰内政部顾问：最近在火车站附近发生的火箭弹袭击可能会使基辅部分地区无法供暖。
+42. 乌克兰国家铁路公司：俄罗斯在基辅火车站附近实施空袭，阻止数千民众撤离。
 
-中共运用军队在北京天安门广场血腥镇压十几万学生市民之后，中共政府运用警察的力量在全国挨个寻查所有参加64平抗议运动学生与平民。在上海、杭州几个大城市参与抗议运动的学生与平民先后被 中共秘密处决，这些数字比在天安门广场被屠杀的学生平民数字还要更多！
-
-想想在全国很多学生因为被秘密枪决，保守失踪的人数都不止十万！ 这些被失踪和枪决的学生与6月4日那一天被中共军队屠杀的几万学生与平民，他们的 母亲而成为有人性与亲情的中国人心中的**“**天安门母亲**”。**
-
-这**“天安门母亲”群体**由中国人民大学丁子霖教授发起成立，丁子霖的儿子蒋捷连，在89-64的夜里，被一颗从背后穿透心脏从前胸钻出的子弹夺去了他17岁年轻的生命。从1994年起，**“天安门母亲”家属**群体每年都会联名致函中共政府为“六四事件”承担责任。
-
-笔者从友人的口述回忆：一家三口住在天安门广场旁边的一个民居建筑，儿子听到枪声不断，跑到窗口伸出脖子往广场观察，忽然对面扫射的弹头击中，脑袋中弹当场倒地。 父母看到孩子突然中弹倒地，那个血色恐怖之夜成夫妻俩一辈子的痛苦，那一夜，中弹而死亡的孩子母亲也成“天安门母亲”。
-
-让我们回顾中国当代的“八九64＂运动，纪念在事件中被中共屠杀的不少于20万的学生和平民，特别是 因此而成为**“天安门母亲”** ，她们一直在寻找她们失踪的孩子。其中这些母亲也陆续离开了人间，我们活着有正义的人们应该为64学生运动正名，统计所有在64运动及后续被中共屠杀与被失踪的名单，以此例证中共的反人类罪行，以安慰**＂天安门＂母亲**，同以安抚逝去32年的六四亡灵。
-
-有一句谚语：**“他们试图把我们都埋了，但不知道我们其实是种子。”**
-
-64天安门大屠杀，表面貌是学生与大兵和中共官方对峙，人与坦克的对抗，但其本质内涵是民主与独裁、和平与暴力的抗争。这是华夏民族与独裁统治政权长达几十年的抗争，正义与邪恶势力的争战从未停息。“八九64”运动在全球产生的蝴蝶效应，如同一颗种子对世界产生的正道主义的影响力及异象深远。
-
-2020年6月4日成立的新中国联邦，是华夏人民的诺亚方舟，这个承载**64种子**的希望，**全球灭共，天道酬勤，中国的**政权必将回归到人民的手中，人类文明世界继以向前发展！新中国联邦与新中国联邦人势必在其中同行！
-
-校对发布：Shifter
 
  
 
