--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,32 +1,20 @@
 ---
-title: 有声&#124;喜马拉雅币一周分析与总结（2月21日-2月27日）
+title: 秘翻在线:联合国大会通过了谴责俄罗斯的决议，有141个国家赞成
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2097086/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2097452/)
 
-配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-过去一周，喜马拉雅币价格回落至40美元左右，平均日交易量约9万枚喜币。喜币上市以来总交易量约2940万枚 ，占今年总发行量仅约2.94%。目前喜币交易在全球尚未完全开放，市场交易量较低，价格仍被严重低估。
+撰稿:沙莉
+![](https://assets.gnews.org/wp-content/uploads/2022/03/그림1-1.jpg)(图片源于https://www.asahi.com/articles/ASQ330RCCQ32UHBI025.html)
+3月2日，由193个国家组成的联合国大会通过了一项谴责俄罗斯并要求其立即撤出乌克兰的决议，有141个国家投票赞成该决议。 只有五个国家，包括俄罗斯，反对该决议。 虽然该决议不具有法律约束力，但它对强调俄罗斯在国际社会中的孤立，并对其施加压力具有重大意义。
 
-本周，据郭文贵先生在大直播中透露，喜贷款目前在法律的最后的研究阶段，会提供喜币大概不超过10%的抵押率，喜存款会有5%到10%的利息，每年通过HCN兑现。G保险会提供世界上最少有的、无条件支付的贴现保险。这些都会是战友主导的金融平台。
+该决议由包括美国、许多欧洲国家和日本在内的96个国家共同提出。 除了俄罗斯外，投反对票的还有白俄罗斯、北朝鲜、厄立特里亚和叙利亚。中国和印度在内的35个国家投了弃权票，12个国家没有任何表态，但很明显，大多数国家对俄罗斯持强硬态度。
 
-郭先生还透露，中共央行等部门最近发布对于人民币5万元以上存款取款限制的根本原因就是防止资金流向喜币，喜联储。郭先生表示，中共限制金融活动的政策造成的恐惧将会形成“破窗效应”，让更多资金加速流向喜币。西方的投资机构将会看到，中国人的财富很难流向美国，欧洲，日本。新加坡和香港也不是安全存放财富的地方。最终自由流通的HPay和喜币将吸收中国人全部的财富。西方的“沼泽地”大佬将开始正视新中国联邦。
+该决议以 “重申《联合国宪章》在促进国家间法治方面的极端重要性 “开始，并谴责俄罗斯宣布的 “特别军事行动”。 它指出，军事行动 “其规模是国际社会几十年来在欧洲是从未见过的”并 “认识到有必要采取紧急行动，使这一代人免遭战争的祸害”。
 
-郭先生还提到，喜币和HPay将会完全抵消世界上各种灾难造成的物价上涨和不确定性，并解决财富流通的不安全性。俄乌战争中，喜币和HPay将成为东欧国家安全、和平的捍卫者。
+信息来源: [https://www.asahi.com/articles/ASQ330RCCQ32UHBI025.html](https://www.asahi.com/articles/ASQ330RCCQ32UHBI025.html)
 
-文字版原文：[喜马拉雅币一周分析与总结（2月21日-2月27日）](https://gnews.org/zh-hans/2080465/)
+责编:Eric Kim
 
-音频处理：呼吸的雾霾（文小呼吸）
-发稿：呼吸的雾霾（文小呼吸）
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1-1.png)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
