--- a/gnews/48.md
+++ b/gnews/48.md
@@ -1,69 +1,23 @@
 ---
-title: 参议员马可·卢比奥：长期来看,中共国的危险性要高出普京50倍
+title: 为抗议中共国卑劣人权问题，瑞典运动员将冬奥金牌赠予被囚书商之女
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2085582/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2090853/)
 
-参议员马可·卢比奥： [#普京](https://gettr.com/hashtag/%23%E6%99%AE%E4%BA%AC) 是罪犯、杀人犯和专制暴徒，必须予以制止 长期来看 [#中共国](https://gettr.com/hashtag/%23%E4%B8%AD%E5%85%B1%E5%9B%BD) 的危险性要高出(普京)50倍
+撰稿：东京樱花团｜加一颗稻草
+![](https://assets.gnews.org/wp-content/uploads/2022/03/pasted-image-0.png)[*图片来源*](https://static01.nyt.com/images/2022/02/25/world/25china-olympics-protest-01/merlin_202769871_0c355735-e68d-4009-94c4-d6aeb3927aff-master1050.jpg)
+瑞典速滑选手尼尔斯·范德普尔，把在北京冬奥会上获得速度滑冰男子10000米项目的奥运金牌送给安吉拉·桂，她是被中共监禁的华裔书商桂民海之女。尼尔斯·范德普尔表示，要用他的胜利来谴责中共政府对言论自由、异见人士和少数民族的残酷镇压。
 
+在全世界的抵制声中，中共国在北京承办的冬奥会上的拙劣表演，让全世界的人们看清了他的流氓本质。这场没有雪的冬奥会让参赛的各国运动员见识了中国共产党以假治国的卑劣手段。
 
+中国共产党在中国犯下了残忍的新疆种族灭绝、香港大屠杀、西藏大屠杀、全世界投放病毒、活摘人体器官、绑架14亿中国人要挟全世界等等罪行。
 
-> [#Putin](https://twitter.com/hashtag/Putin?src=hash&amp;ref_src=twsrc%5Etfw) is a criminal,a murderer and an authoritarian thug who must be stopped
-> 
-> And long term [#China](https://twitter.com/hashtag/China?src=hash&amp;ref_src=twsrc%5Etfw) is 50 times more dangerous [pic.twitter.com/GvpRTalKHH](https://t.co/GvpRTalKHH)
-> — Marco Rubio (@marcorubio) [March 1, 2022](https://twitter.com/marcorubio/status/1498511007580401665?ref_src=twsrc%5Etfw)
+在新中国联邦的推动下，全世界正在把中共虚伪的外衣一层一层剥下，使中共画皮下魔鬼的嘴脸暴露无余，在阳光照射下，它的邪恶力量正在消亡，最终会灰飞烟灭。
 
+消息来源：[**抗議中國，瑞典運動員將冬奧金牌贈予被囚書商之女**](https://cn.nytimes.com/world/20220228/nils-van-der-poel-olympic-protest/zh-hant/)
 
-
-参议员马可·卢比奥： 也许普京 [#Putin](https://twitter.com/hashtag/Putin?src=hashtag_click) 会占领基辅 [#Kyiv](https://twitter.com/hashtag/Kyiv?src=hashtag_click)，但他永远不会征服乌克兰 [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hashtag_click) 他不仅在与军队作战，还在与超过4000万乌克兰人民作战 他们不会停止杀死 [#Russia](https://twitter.com/hashtag/Russia?src=hashtag_click) 俄罗斯的侵略者，直到他们全部消失。
-
-
-
-> Maybe [#Putin](https://twitter.com/hashtag/Putin?src=hash&amp;ref_src=twsrc%5Etfw) takes [#Kyiv](https://twitter.com/hashtag/Kyiv?src=hash&amp;ref_src=twsrc%5Etfw), but he will NEVER conquer [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hash&amp;ref_src=twsrc%5Etfw) 
-> 
-> He isn’t just fighting against a military he is fighting against over 40 million people 
-> 
-> And they won’t stop killing [#Russia](https://twitter.com/hashtag/Russia?src=hash&amp;ref_src=twsrc%5Etfw)’s invaders until all of them are gone
->  [https://t.co/cpNGAIasft](https://t.co/cpNGAIasft)
-> — Marco Rubio (@marcorubio) [March 1, 2022](https://twitter.com/marcorubio/status/1498518153818779649?ref_src=twsrc%5Etfw)
-
-
-
-前国务卿迈克.蓬佩奥： 寡头们正在为普京的钱而洗钱，他们一半以上的财富是从俄罗斯境外洗钱来的。制裁他们，冻结他们的资产。
-
-
-
-> Putin's money is being laundered by oligarchs, who launder more than half of their wealth outside of Russia. Sanction them. Freeze their assets.
-> — Mike Pompeo (@mikepompeo) [February 28, 2022](https://twitter.com/mikepompeo/status/1498426534289358856?ref_src=twsrc%5Etfw)
-
-
-
-参议员玛莎.布莱克本： 在川普总统的领导下，美国是一个能源出口国。 现在，美国和欧洲正因对能源的依赖增强俄罗斯。 【转华尔街时报观点：如何用天然气击败普京】
-
-
-
-> Under President Trump, America was an energy exporter. Now, the US & Europe are empowering Russia with energy dependence.[https://t.co/WTYZtW2oBk](https://t.co/WTYZtW2oBk)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [February 28, 2022](https://twitter.com/MarshaBlackburn/status/1498409493016846339?ref_src=twsrc%5Etfw)
-
-
-
-美国务卿布林肯： 我欢迎瑞士、韩国和新加坡采取行动，对俄罗斯侵略乌克兰采取进一步的经济措施。国际社会比以往任何时候都更加团结一致，谴责普京无端发动战争，声援乌克兰。
-
-
-
-> I welcome actions by Switzerland, the ROK, and Singapore to implement further economic measures on Russia for its aggression against Ukraine. The international community is unified more than ever in condemning Putin's unprovoked war and acting in solidarity with Ukraine.
-> — Secretary Antony Blinken (@SecBlinken) [February 28, 2022](https://twitter.com/SecBlinken/status/1498404448888107016?ref_src=twsrc%5Etfw)
-
-
-
-众议员迈克·加西亚： 当所有人都在关注乌克兰的悲剧时，我们不能忘记美国和世界面临的最大威胁:中国共产党。中国不是我们的朋友。为什么美国总统要与中共分享美国情报? （转纽约时报：美国官员一再敦促中国帮助避免乌克兰的战争）
-
-
-
-> While all eyes are on the tragedy in Ukraine, we must not forget about the biggest threat the U.S. & the world faces: The CCP. China is not our friend. Why is [@POTUS](https://twitter.com/POTUS?ref_src=twsrc%5Etfw) sharing U.S. intel with the CCP?[https://t.co/zXqDIjrxzQ](https://t.co/zXqDIjrxzQ)
-> — Rep. Mike Garcia (@RepMikeGarcia) [February 28, 2022](https://twitter.com/RepMikeGarcia/status/1498313245832196103?ref_src=twsrc%5Etfw)
-
-
-
+*校对：东京樱花团/東洋武士*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
