--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,68 +1,31 @@
 ---
-title: 有声&#124;核爆炸应急指南
+title: 大直播后记： 乌克兰崇拜中国文化
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2097087/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2097464/)
 
-配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-核武器是一种利用核反应制造爆炸的装置。核装置包括小到个人可携带的小型便携式装置，大到导弹携带的武器。核爆炸可能在有警告或没有警告情况下的几分钟内发生，并可能会因爆炸、热量和辐射而造成重大损害和伤亡。
+#### 整理：Anita、Lucy Liu
+编辑：Mohegayer K. Simon
 
-面对可能爆发的核战争，我们可以通过了解发生核爆炸时该做什么，并做好相应的准备，保证自己和家人的安全。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/图片2-15.png)图片来源：墨尔本雅典娜农场设计组
 
-落尘在引爆后的几个小时内辐射水平最高，最危险。落尘需要时间回落到地面，对于直接爆炸破坏区以外的地区，往往需要15分钟以上，这段时间可以通过以下简单的步骤防止大量的辐射暴露：
 
-1.进入室内
-进入最近的建筑物，避免辐射。砖头或混凝土优先。
-如果衣物被落尘污染，脱掉被污染的衣服，并擦洗裸露的皮肤。
-到地下室或建筑物的中间去。远离外墙和屋顶。
+反过来另外一个问题我们也看到，中国人在很多国家是绝对受尊重受欢迎的，特别像乌克兰这个国家对中国文化的崇拜。乌克兰人崇拜三个文化。第一文化是苏联俄罗斯，他们真的崇拜俄罗斯文化，不是假的。第二崇拜犹太人文化。乌克兰的整个现在的经济和基础文化宗教几乎是犹太人影响着一切。第三，他们最喜欢的文化就是中国文化。西方的白人嫁给中国男人，乌克兰可能排了前3名。我生活中有好几个就是娶了乌克兰的女人。人家美国女人，说句难听话，人赖在家都不嫁给中国人。而日本女人就别说嫁给中国人了，那个什么歌舞厅，上面写着拒绝中国男人进来。就像我们那个战友，我们救出来的大校，到日本，嫖了半夜了，最后说中国话，这哥们要早说中国话人家就不让进来了。
 
-2.留在室内
-除非当地政府提供其他指示，24小时内请留在室内。
-家人留在当地室内，避免暴露在危险的辐射中。
-宠物留在室内。
+为什么呀？大家要记住另外一个层次就是中国现代的人文的这种政治操纵，让全世界不喜欢中国人。全世界现在很多国家一旦事儿起来，逮着机会就遣返华人，把华人扔到集中营去的可能性越来越大。排华已经不可避免，只是多少的问题。就连加拿大这个大农村，好几个咱们内部的战友说，加拿大内部政府说了，如果在加拿大开始有反华的时候我们该怎么办？华人很散，主要温哥华怎么办？他很惊讶，说这么大的加拿大，你上哪找华人去啊？而且这个是移民国家，但是政府内部人讨论的，如果有大型的排华怎么办？你可想在日本这种国家，那些右翼天天喊着肮脏的中国人滚回中国去，撒谎的中国人滚回中国去，你去想想什么感觉？
 
-3.保持关注
-收听官方信息，如什么时候可以安全离开，你应该去哪里。
-电池供电和手摇式收音机在核爆炸后仍可使用。
-手机短信、电视和互联网服务可能会被中断，无法使用。
+救援行动激动人心。那么接下来我们的救援当中，要记住，优先救我们的战友。今天特别高兴由咱们长岛哥主导的全面的救援行动，和老班长啊，还有在我们铁血组所有联盟委员会共同的努力下，在战区当中的4个铁战友3个家庭昨天已经彻底的离开了乌克兰，已经到达了波兰。今天我可以这么宣布。
 
-一旦发生核爆炸，请参考以下指示：
+资料来源：2022年3月2日文贵大直播
 
-1.做好准备：
-确定避难所位置。在熟悉的地方附近确定最好的避难场所，如家、工作地或学校，地下室和较大建筑物的中间优先。
-在通勤途中，确定适当的避难所。
-户外场地、车辆和活动房屋不能提供足够的庇护。地下室或大型多层建筑的中心优先。
-确保准备一个紧急补给包，用于经常去的、且可能要呆上24小时的地方。其中应该包括瓶装水、包装食品、应急药品、手摇或电池供电的收音机（以便在停电时获取信息）、手电筒和必要物品的额外电池。如果可能的话，储存三天或更长时间的物资。
+*发布：Frank2021*
 
-2.发生核爆炸时：
-如果被警告即将发生爆炸，立即进入最近的建筑物内，远离窗户，避免爆炸的炸裂、热量和辐射。
-当爆炸发生时，如果在户外，躲在任何可能提供保护的东西后面。脸朝下躺着，以保护皮肤免受高温和飞溅碎片的伤害。如果你在车上，请安全停车，并躲在车内。
-冲击波过后，进入最近的、最好的避难所，保护自己免受潜在落尘的伤害。你将有10分钟或更多的时间来找到合适的避难所。
-确保在落尘到来之前进入室内。落尘的辐射水平在其到达地面后最高，并随着时间的推移而减少。
-继续关注应急官员的最新指示，如果被建议疏散，听从有关路线、避难所和程序的信息。
-如果已被疏散，在被通知安全之前，不要返回。
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-3.安全之后：
-进入避难所后，如果衣物被落尘污染，立即脱掉这些衣服，清除落尘和辐射。
-用肥皂和水清洗裸露的皮肤或头发上的落尘。如果无法清洗或淋浴，用抹布或干净的湿布擦拭皮肤或头发。
-如果落尘附在宠物身体上，轻轻梳理宠物的毛发，去除任何落尘颗粒，如果可以，请用肥皂和水清洗宠物。
-食用或饮用建筑物内安全的包装食品。不要食用户外的、没有遮盖的、可能被落尘污染的食物或液体。
-如果生病或受伤，当被通知可以安全离开时，请听从指示，了解如何以及在哪里接受医疗护理。
-
-文字版原文：[核爆炸应急指南](https://gnews.org/zh-hans/2081505/)
-
-音频处理：呼吸的雾霾（文小呼吸）
-发稿：呼吸的雾霾（文小呼吸）
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1-1.png)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
